*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9075 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -292,11 +292,14 @@ foxtrick.TableSort.desc=Fa que totes les taules correctes i que tinguin capçale
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Estadístiques
 ExtraShortcuts.transfers=Transferències
 ExtraShortcuts.prefs=Preferències
 ExtraShortcuts.ftprefs=Preferències de FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Temporada
@@ -332,7 +335,6 @@ TeamStats.NotPlayedLatest=No ha jugat el darrer partit
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Informació de la lliga
-
 seasonstats.played=Pj
 seasonstats.won=G
 seasonstats.draw=E
@@ -348,7 +350,6 @@ seasonstats.friendly=Amistosos
 seasonstats.cup=Copa
 seasonstats.masters=Màsters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtre de l'alimentador de notícies\:
 LeagueNewsFilter.all=Tot
@@ -356,10 +357,11 @@ LeagueNewsFilter.friendlies=Amistosos i canvis d'entrenador
 LeagueNewsFilter.transfers=Transferències
 LeagueNewsFilter.lineupChanges=Canvis a la alineació
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Feu clic en el botó «Desa» de la següent pàgina per deixar aquest fòrum.
 AddLeaveConfButton.LeaveForum=Surt d'aquest fòrum
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Crea una plantilla basada en el missatge
@@ -375,14 +377,6 @@ show_preview_from_post=Vista prèvia del missatge
 preview=Vista prèvia
 forumPreview.send=Envia
 
-#Forums
-copy.PostID=Copia la id de missatge al porta-retalls
-CopyPosting=Copia el missatge amb estil %s
-CopyPosting.abbr=Copia amb estil %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=en brut
-CopyPosting.style.last=últim
 
 ForumYouthIcons.label=Enllaços del planter
 ForumYouthIcons.labelToolbar=Enllaços principals
@@ -408,10 +402,10 @@ ForumSpecialBBCode.enterSeparator=Introdueix un separador personalitzat
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtres de FoxTrick
 TransferSearchFilters.enterName=Introduïu el nom del filtre\:
 TransferSearchFilters.deleteFilter.ask=Voleu eliminar aquest filtre?
 TransferSearchFilters.saveFilter=Desa un filtre nou
-TransferSearchFilters.boxheader=Filtres de FoxTrick
 
 #Filter
 
@@ -548,7 +542,6 @@ Current_league.abbr=Lliga
 match.ratings.midfield=Mig
 match.ratings.attack=Atac
 match.ratings.defence=Defensa
-lineupShortcut.lineup=alineació
 
 match.ratings.right=Dreta
 match.ratings.center=Central
@@ -606,6 +599,14 @@ copy.copied=S’ha copiat l’anunci de jugador al porta-retalls.
 
 
 #copy
+copy.PostID=Copia la id de missatge al porta-retalls
+CopyPosting=Copia el missatge amb estil %s
+CopyPosting.abbr=Copia amb estil %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=en brut
+CopyPosting.style.last=últim
+
 CopyRatings.both=Copia els ratis (HT-ML)
 CopyRatings.home=Copia els ratis de l'quip casolà (HT-ML)
 CopyRatings.away=Copia els ratis de l'equip forà (HT-ML)
@@ -629,11 +630,6 @@ matches.defense=de.
 matches.attack=at.
 matches.indfreekick=Tirs Lliures indirectes
 matches.wronglang=FoxTrick\: No es poden mostrar les qualificacions ja que, o la vostra llengua no està registrada, o heu seleccionat en les preferències una llengua incorrecta. Comproveu que el vostre idioma a FoxTrick és el mateix que el de hattrick.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Estadístiques de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
