--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -262,12 +262,15 @@ foxtrick.RatingsDisplay.HatStats.desc=Ως HatStats
 #Embed Media
 EmbedMedia.EmbeddedImage=Ενσωματωμένη εικόνα
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=στατιστικά
 ExtraShortcuts.transfers=μεταγραφες
 ExtraShortcuts.ManageCHPP=Διαχείριση προϊόντων CHPP
 ExtraShortcuts.prefs=Προτιμήσεις
 ExtraShortcuts.ftprefs=Προτιμήσεις FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Σεζόν
@@ -308,7 +311,6 @@ TeamStats.FilterFor=Φίλτρο για
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Επισκόπηση περιόδου
-
 seasonstats.played=Αγν
 seasonstats.won=Ν
 seasonstats.draw=Ι
@@ -324,7 +326,6 @@ seasonstats.friendly=Φιλικά
 seasonstats.cup=Κύπελλο
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Νέα με φίλτρο\:
 LeagueNewsFilter.all=Όλα
@@ -332,10 +333,11 @@ LeagueNewsFilter.friendlies=Φιλικά & αλλαγές προπονητών
 LeagueNewsFilter.transfers=Μεταγραφές
 LeagueNewsFilter.lineupChanges=Αλλαγές εντεκάδας
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Πάτα το μπουτόν 'Σώσε' στην επόμενη σελίδα για να εγκαταλείψεις την διάσκεψη.
 AddLeaveConfButton.LeaveForum=Εγκατέλειψε την διάσκεψη
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Προτιμήσεις φόρουμ
 
 # ForumTemplates
@@ -352,14 +354,6 @@ show_preview_from_post=Εμφανίζει προεπισκόπηση της δη
 preview=Προεπισκόπηση
 forumPreview.send=Αποστολή
 
-#Forums
-copy.PostID=Αντγραφή στο πρόχειρο
-CopyPosting=Αντιγραφή καταχώρησης σε %s στυλ
-CopyPosting.abbr=Αντιγραφή σε %s στυλ
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=ακατέργαστο
-CopyPosting.style.last=τελευταίο
 
 ForumYouthIcons.label=Σύνδεσμοι Νέων
 ForumYouthIcons.labelTournament=Τουρνουά
@@ -394,10 +388,10 @@ ForumSpecialBBCode.symbols=Εισάγετε σύμβολο\: %s
 ShowNestedQuotes=Εμφάνιση ένθετων παραθέσεων
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Foxtrick Φίλτρα
 TransferSearchFilters.enterName=Εισαγωγή ονόματος φίλτρου\:
 TransferSearchFilters.deleteFilter.ask=Θέλεις σίγουρα να διαγράψεις αυτό το φίλτρο?
 TransferSearchFilters.saveFilter=Σώσε το νέο φίλτρο
-TransferSearchFilters.boxheader=Foxtrick Φίλτρα
 
 #Filter
 Filters=Φίλτρα
@@ -623,7 +617,6 @@ match.ratings.midfield=Κέντρο
 match.ratings.attack=Επίθεση
 match.ratings.defence=Αμυνα
 match.ratings.total=Σύνολο
-lineupShortcut.lineup=Σχηματισμός
 
 match.ratings.right=Δεξιά
 match.ratings.center=Κέντρο
@@ -689,6 +682,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Αντγραφή στο πρόχειρο
+CopyPosting=Αντιγραφή καταχώρησης σε %s στυλ
+CopyPosting.abbr=Αντιγραφή σε %s στυλ
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=ακατέργαστο
+CopyPosting.style.last=τελευταίο
+
 CopyRatings.both=Αντιγράψτε βαθμολογια (σε HT-ML)
 CopyRatings.home=Αξιολογήσεις εντος εδρας Αντιγραφή (σε HT-Λ)
 CopyRatings.away=Αντιγράψτε βαθμολογία εκτος εδρας (σε HT-Λ)
@@ -731,11 +732,6 @@ matches.defense=αμ
 matches.attack=επ
 matches.indfreekick=Εμμεσο φάουλ
 matches.wronglang=Foxtrick\: Τα στατιστικά δεν μπορούν να εμφανιστούν επειδή η γλώσσα σας δεν υπάρχει ή επειδή έχετε λάθος γλώσσα στις προτιμήσεις. Παρακαλώ βεβαιωθείτε ότι η γλώσσα του Foxtrick είναι η ίδια με του Hattrick.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Στατιστικά συνδρομητών
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
