--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -52,12 +52,17 @@ foxtrick.SeniorTeamShortCuts.desc=Adds coach and last lineup links to senior tea
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Fixes cut of long team names on left menu
 foxtrick.SkinPlugin.desc=Adds your own CSS skin to Hattrick
 #ExtraShortcuts
+ExtraShortcuts.ManageCHPP.desc=Link to CHPP preferences page
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly/tournament icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league positions
 foxtrick.NewMail.NotifyMailSound.desc=Play sound on new mail
 foxtrick.NewMail.NotifyForumSound.desc=Play sound on new forum reply
 foxtrick.MovePlayerSelectbox.desc=Moves players select box up on players detail page
+LeagueNewsFilter.all.desc=Show all news
+LeagueNewsFilter.friendlies.desc=Show only international friendlies and changed coaches
+LeagueNewsFilter.transfers.desc=Show only transfers
+LeagueNewsFilter.lineupChanges.desc=Show only lineup changes
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 foxtrick.SkillColoring.skill_color.desc=Colourises skills
@@ -90,37 +95,91 @@ SafeForWork.title=Title
 SafeForWork.icon=Icon
 
 #Embed Media
+EmbedMedia.EmbeddedImage=Embedded Image
 
-#icons
+#Extrashortcuts
+ExtraShortcuts.statistics=Statistics
+ExtraShortcuts.transfers=Transfers
+ExtraShortcuts.ManageCHPP=Manage your CHPP products
+ExtraShortcuts.prefs=Preferences
+ExtraShortcuts.ftprefs=FoxTrick preferences
+
+#lineupShortcut
+LineupShortcut.lineup=Lineup
+
 
 #HistoryStats
+HistoryStats.season=Season
+HistoryStats.season.short=S
+HistoryStats.cup=Cup round
+HistoryStats.cup.short=C
+HistoryStats.league=Series
+HistoryStats.league.short=Ser.
+HistoryStats.finalPosition=Series final position
+HistoryStats.finalPosition.short=P
+HistoryStats.label=History stats
+HistoryStats.cupwinner=Cup winner
+HistoryStats.cupwinner.short=CW
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.future=Player can be promoted %1 day later, on %2.;Player can be promoted %1 days later, on %2.
 
 # links
+links.boxheader=Links
 
 #teamstats+filters
+TeamStats.boxheader=Team overview
+TeamStats.PlayerNotToOld=Players < 19 yr
+TeamStats.PlayerToOld=Players >\= 19 yr
+TeamStats.Cards=Cards
+TeamStats.Injured=Injured
+TeamStats.TransferListed=Transfer-listed
+TeamStats.Pictures=Faces
+TeamStats.PlayedLatest=Played in last match
 TeamStats.NotPlayedLatest=Did not play in last match
+TeamStats.NotTransferListed=Not Transfer-listed
+TeamStats.ActivePlayers=Active players
 TeamStats.HomeGrownPlayers=Home grown players
+TeamStats.PurchasedPlayers=Purchased players
 TeamStats.FilterFor=Filter for
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-
-
+seasonstats.boxheader=Season overview
+seasonstats.played=Pld
+seasonstats.won=W
+seasonstats.draw=D
+seasonstats.lost=L
+seasonstats.goalplus=GF
+seasonstats.goalminus=GA
+seasonstats.goaldiff=±
+seasonstats.total=T
+seasonstats.home=H
+seasonstats.away=A
+seasonstats.league=League
+seasonstats.friendly=Friendlies
+seasonstats.cup=Cup
+seasonstats.masters=Masters
 
 #Newsfeed filter
+LeagueNewsFilter.label=Newsfeed filter\:
+LeagueNewsFilter.all=All
+LeagueNewsFilter.friendlies=Friendlies & changed coaches
+LeagueNewsFilter.transfers=Transfers
+LeagueNewsFilter.lineupChanges=Lineup changes
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
+AddLeaveConfButton.alert=Click on the 'Save' button on the next page to leave this forum.
+AddLeaveConfButton.LeaveForum=Leave forum
 
+#ShowForumPrefButton
+ShowForumPrefButton.forumPreferences=Forum Preferences
 
 # ForumTemplates
 
 #PostPreview
 
-#Forums
 
 ForumYouthIcons.labelTournament=Tournaments
 ForumYouthIcons.tournamentid=Insert tournament tag.
@@ -136,6 +195,10 @@ ForumSpecialBBCode.article=Add ArticleID
 ShowNestedQuotes=Show nested quotes
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick Filters
+TransferSearchFilters.enterName=Enter filter name\:
+TransferSearchFilters.deleteFilter.ask=Do you really want to delete this filter?
+TransferSearchFilters.saveFilter=Save new filter
 
 #Filter
 Filters.addFilterOptions=Add filter options
@@ -197,8 +260,18 @@ Last_match_didnot_play=Has not played yet.
 skilltable.rebought_youthplayer=rebought youth player
 
 #matchdetail
+match.ratings.midfield=Midfield
+match.ratings.attack=Attack
+match.ratings.defence=Defence
+match.ratings.total=Total
 
+match.ratings.right=Right
 match.ratings.center=Centre
+match.ratings.left=Left
+match.ratings.rightshort=R
+match.ratings.centershort=C
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
 foxtrick.confirmstripserver=Do you want to strip the Hattrick server from links to make them usable in the forum?
 copy.selectplayer=Select player
 foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example\: http\://example.org/league/427/). For internal static links skip the server part (Example\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http\://example.org/league/[LeagueID] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
@@ -225,6 +298,8 @@ copy.copied=The player ad has been copied to the clipboard.
 
 
 #copy
+copy.PostID=Copy PostID to clipboard
+
 
 
 copy.copy.skilltable=Copy skill table to clipboard (in HT-ML)
@@ -246,11 +321,6 @@ matches.defense=def
 matches.attack=att
 matches.indfreekick=Ind. set pieces
 matches.wronglang=FoxTrick\: The stats cannot be displayed because your language is not recognised or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporter Statistics
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
