--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -395,12 +395,15 @@ SafeForWork.icon=Icono
 #Embed Media
 EmbedMedia.EmbeddedImage=Imagen Embebida
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Estadísticas
 ExtraShortcuts.transfers=Transferencias
 ExtraShortcuts.ManageCHPP=Organizar tus aplicaciones CHPP
 ExtraShortcuts.prefs=Preferencias
 ExtraShortcuts.ftprefs=Preferencias de FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Temporada
@@ -442,7 +445,6 @@ TeamStats.FilterFor=Filtro para
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Resumen Temporada
-
 seasonstats.played=PJ
 seasonstats.won=PG
 seasonstats.draw=PE
@@ -458,7 +460,6 @@ seasonstats.friendly=Amistoso
 seasonstats.cup=Copa
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtro de Noticias\:
 LeagueNewsFilter.all=Todas
@@ -466,10 +467,11 @@ LeagueNewsFilter.friendlies=Amistosos y cambios de entrenador
 LeagueNewsFilter.transfers=Transferencias
 LeagueNewsFilter.lineupChanges=Cambios Alineación
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
 AddLeaveConfButton.LeaveForum=Abandonar foro.
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Preferencias del Foro
 
 # ForumTemplates
@@ -486,14 +488,6 @@ show_preview_from_post=Mostrar Vista previa del mensaje
 preview=Vista previa
 forumPreview.send=Enviar
 
-#Forums
-copy.PostID=Copiar al Portapapeles el ID del mensaje
-CopyPosting=Copiar mensaje en estilo %s
-CopyPosting.abbr=Copiar en estilo %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=sin formato
-CopyPosting.style.last=último
 
 ForumYouthIcons.label=Enlaces de Juveniles
 ForumYouthIcons.labelTournament=Torneos
@@ -528,10 +522,10 @@ ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 ShowNestedQuotes=Mostrar citas anidadas
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtros de Foxtrick
 TransferSearchFilters.enterName=Escriba el nombre del filtro\:
 TransferSearchFilters.deleteFilter.ask=¿Deseas borrar este filtro?
 TransferSearchFilters.saveFilter=Guardar nuevo filtro
-TransferSearchFilters.boxheader=Filtros de Foxtrick
 
 #Filter
 Filters=Filtros
@@ -760,7 +754,6 @@ match.ratings.midfield=Mediocampo
 match.ratings.attack=Ataque
 match.ratings.defence=Defensa
 match.ratings.total=Total
-lineupShortcut.lineup=alineación
 
 match.ratings.right=Derecha
 match.ratings.center=Central
@@ -828,6 +821,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copiar al Portapapeles el ID del mensaje
+CopyPosting=Copiar mensaje en estilo %s
+CopyPosting.abbr=Copiar en estilo %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=sin formato
+CopyPosting.style.last=último
+
 CopyRatings.both=Copiar las calificaciones (codigo HT-ML)
 CopyRatings.home=Copiar las calificaciones del equipo local (código HT-ML)
 CopyRatings.away=Copiar las calificaciones del equipo visitante (código HT-ML)
@@ -870,11 +871,6 @@ matches.defense=def
 matches.attack=atq
 matches.indfreekick=Tiros libres indirectos
 matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Estadísticas de Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
