--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -72,7 +72,10 @@ foxtrick.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
 
 #Embed Media
 
-#icons
+#Extrashortcuts
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -89,18 +92,16 @@ TeamStats.TransferListed=Müüginimekirjas
 #season stats
 #note to translators. use abreviations of league table where applicable
 
-
-
 #Newsfeed filter
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 
+#ShowForumPrefButton
 
 # ForumTemplates
 
 #PostPreview
 
-#Forums
 
 
 
@@ -168,11 +169,8 @@ TeamStats.TransferListed=Müüginimekirjas
 
 
 
+
 #matches
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
