--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -330,11 +330,14 @@ foxtrick.MatchOrderInterface.Specialties.desc=نمایش تخصص بازیکن
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=امار
 ExtraShortcuts.transfers=نقل و انتقالات
 ExtraShortcuts.prefs=تنظيمات
 ExtraShortcuts.ftprefs=تنظيمات فاکس تريک
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=فصل
@@ -371,7 +374,6 @@ TeamStats.NotPlayedLatest=در بازي اخر بازي نکرده
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=اطلاعات فصل
-
 seasonstats.played=بازي
 seasonstats.won=برد
 seasonstats.draw=مساوي
@@ -387,7 +389,6 @@ seasonstats.friendly=دوستانه
 seasonstats.cup=کاپ
 seasonstats.masters=مدير
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=فيلتر اخبار
 LeagueNewsFilter.all=همه
@@ -395,10 +396,11 @@ LeagueNewsFilter.friendlies=دوستانه و تغيير مربي
 LeagueNewsFilter.transfers=نقل و انتقالات
 LeagueNewsFilter.lineupChanges=تغيير ترکيب
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=براي ترک اين انجمن بر روي "ذخيره" در صفحه بعد کليک کنيد
 AddLeaveConfButton.LeaveForum=ترک انجمن
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=تنظيمات انجمن
 
 # ForumTemplates
@@ -415,14 +417,6 @@ show_preview_from_post=نمايش پيشنمايش پست
 preview=پيش نمايش
 forumPreview.send=ارسال
 
-#Forums
-copy.PostID=ذخيره شماره شناسايي پست در حافظه
-CopyPosting=کپي پست در %s مدل
-CopyPosting.abbr=کپي در %s مدل
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=اخرين
 
 ForumYouthIcons.label=پيوندهاي جوانان
 ForumYouthIcons.labelToolbar=پيوندهاي اصلي
@@ -448,10 +442,10 @@ ForumSpecialBBCode.enterSeparator=Enter a custom separator
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=فيلترهاي فاکس تريک
 TransferSearchFilters.enterName=نام فيلتر\:
 TransferSearchFilters.deleteFilter.ask=ايا مي خواهيد اين فيلتر را پاک کنيد ؟
 TransferSearchFilters.saveFilter=ذخيره فيلتر جديد
-TransferSearchFilters.boxheader=فيلترهاي فاکس تريک
 
 #Filter
 
@@ -640,7 +634,6 @@ match.ratings.midfield=خط هافبک
 match.ratings.attack=خط حمله
 match.ratings.defence=خط دفاع
 match.ratings.total=کلي
-lineupShortcut.lineup=چيدمان
 
 match.ratings.right=راست
 match.ratings.center=مرکز
@@ -708,6 +701,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=ذخيره شماره شناسايي پست در حافظه
+CopyPosting=کپي پست در %s مدل
+CopyPosting.abbr=کپي در %s مدل
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=اخرين
+
 CopyRatings.both=کپي نمودن عملکرد (in HT-ML)
 CopyRatings.home=کپي نمودن عملکرد تيم ميزبان (in HT-ML)
 CopyRatings.away=کپي نمودن عملکرد تيم مهمان(in HT-ML)
@@ -747,11 +748,6 @@ matches.defense=دفاع
 matches.attack=حمله
 matches.indfreekick=ضربه ي ايستگاهي
 matches.wronglang=.فاکس تريک \: آمار نشان داده نميشوند زيرا زبان انتخابي شما ثبت نشده است يا شما يک زبان را به اشتباه انتخاب کرديد.لطفا اطمينان پيدا کنيد از تنظيمات انتخاب شده
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=آمار حامي هت تريک
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
