--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -391,12 +391,15 @@ SafeForWork.icon=Ikoni
 #Embed Media
 EmbedMedia.EmbeddedImage=Upotettu Kuva
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Tilastot
 ExtraShortcuts.transfers=Siirrot
 ExtraShortcuts.ManageCHPP=Hallinnoi CHPP-ohjelmiasi
 ExtraShortcuts.prefs=Asetukset
 ExtraShortcuts.ftprefs=FoxTrick-asetukset
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Kausi
@@ -438,7 +441,6 @@ TeamStats.FilterFor=Suodata
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Kauden yleiskatsaus
-
 seasonstats.played=O
 seasonstats.won=V
 seasonstats.draw=T
@@ -454,7 +456,6 @@ seasonstats.friendly=Ystävyysottelut
 seasonstats.cup=Cup
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Newsfeed suodatin\:
 LeagueNewsFilter.all=Kaikki
@@ -462,10 +463,11 @@ LeagueNewsFilter.friendlies=Ystävyysottelut & valmentajan vaihdot
 LeagueNewsFilter.transfers=Siirrot
 LeagueNewsFilter.lineupChanges=Kokoonpanomuutokset
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klikkaa 'Tallenna' nappia seuraavalla sivulla, jättääksesi tämän foorumin.
 AddLeaveConfButton.LeaveForum=Jätä foorumi
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Foorumiasetukset
 
 # ForumTemplates
@@ -482,14 +484,6 @@ show_preview_from_post=Esikatsele viesti
 preview=Esikatselu
 forumPreview.send=Lähetä
 
-#Forums
-copy.PostID=Kopioi viestiID leikepöytään
-CopyPosting=Copy Posting in %s style
-CopyPosting.abbr=Copy in %s style
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=last
 
 ForumYouthIcons.label=Junioritagit
 ForumYouthIcons.labelTournament=Turnaukset
@@ -523,10 +517,10 @@ ForumSpecialBBCode.symbols=Lisää symboli\: %s
 ShowNestedQuotes=Näytä sisäkkäiset lainaukset
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Foxtrick-suodattimet
 TransferSearchFilters.enterName=Anna suodattimelle nimi\:
 TransferSearchFilters.deleteFilter.ask=Oletko varma, että haluat poistaa tämän suodattimen?
 TransferSearchFilters.saveFilter=Tallenna uusi suodatin
-TransferSearchFilters.boxheader=Foxtrick-suodattimet
 
 #Filter
 Filters=Suodattimet
@@ -755,7 +749,6 @@ match.ratings.midfield=Keskikenttä
 match.ratings.attack=Hyökkäys
 match.ratings.defence=Puolustus
 match.ratings.total=Yhteensä
-lineupShortcut.lineup=kokoonpano
 
 match.ratings.right=Oikea
 match.ratings.center=Keskus
@@ -823,6 +816,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Kopioi viestiID leikepöytään
+CopyPosting=Copy Posting in %s style
+CopyPosting.abbr=Copy in %s style
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=last
+
 CopyRatings.both=Kopioi arvostelut HT-ML-muodossa
 CopyRatings.home=Kopioi kotijoukkueen arvostelut HT-ML-muodossa
 CopyRatings.away=Kopioi vierasjoukkueen arvostelut HT-ML-muodossa
@@ -865,11 +866,6 @@ matches.defense=Puol.
 matches.attack=Hyök.
 matches.indfreekick=Epäs. vapaapotkut
 matches.wronglang=Foxtrick\: Tilastoja ei voida näyttää, koska kielesi ei ole rekisteröity tai olet asettanut väärän kielen asetuksissa. Ole hyvä, ja varmista että Foxtrick-kielesi on sama kuin Hattrick-kielesi.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporter-tilastot
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
