--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -395,12 +395,15 @@ SafeForWork.icon=Icône
 #Embed Media
 EmbedMedia.EmbeddedImage=Image incrustée
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistiques
 ExtraShortcuts.transfers=Enchères en cours
 ExtraShortcuts.ManageCHPP=Gérer vos produits CHPP
 ExtraShortcuts.prefs=Préférences
 ExtraShortcuts.ftprefs=FoxTrick préférences
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Saison
@@ -442,7 +445,6 @@ TeamStats.FilterFor=Filtre pour
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Synthèse
-
 seasonstats.played=J
 seasonstats.won=V
 seasonstats.draw=N
@@ -458,7 +460,6 @@ seasonstats.friendly=Amical
 seasonstats.cup=Coupe
 seasonstats.masters=Hattrick Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtre des informations de la division \:
 LeagueNewsFilter.all=Tout
@@ -466,10 +467,11 @@ LeagueNewsFilter.friendlies=Amicaux & changements d'entraîneurs
 LeagueNewsFilter.transfers=Transferts
 LeagueNewsFilter.lineupChanges=Changements composition d'équipes
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Cliquez sur le bouton 'Sauvegarder' sur la page suivante pour quitter cette conférence.
 AddLeaveConfButton.LeaveForum=Quitter la conférence
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Préférences du Forum
 
 # ForumTemplates
@@ -486,14 +488,6 @@ show_preview_from_post=Prévisualisation du message
 preview=Aperçu
 forumPreview.send=Envoyer
 
-#Forums
-copy.PostID=Copie l'identifiant du message dans le presse-papiers
-CopyPosting=Copier coller dans le style %s
-CopyPosting.abbr=Copier dans le style %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=dernier
 
 ForumYouthIcons.label=Équipe junior
 ForumYouthIcons.labelTournament=Tournois
@@ -528,10 +522,10 @@ ForumSpecialBBCode.symbols=Inserer le symbole\: %s
 ShowNestedQuotes=Afficher les citations masquées
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtres FoxTrick
 TransferSearchFilters.enterName=Entrez le nom du filtre \:
 TransferSearchFilters.deleteFilter.ask=Voulez-vous vraiment supprimer ce filtre ?
 TransferSearchFilters.saveFilter=Enregistrer le nouveau filtre
-TransferSearchFilters.boxheader=Filtres FoxTrick
 
 #Filter
 Filters=Filtres
@@ -760,7 +754,6 @@ match.ratings.midfield=Milieu
 match.ratings.attack=Attaque
 match.ratings.defence=Défense
 match.ratings.total=Total
-lineupShortcut.lineup=Composition
 
 match.ratings.right=Droite
 match.ratings.center=Centre
@@ -828,6 +821,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copie l'identifiant du message dans le presse-papiers
+CopyPosting=Copier coller dans le style %s
+CopyPosting.abbr=Copier dans le style %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=dernier
+
 CopyRatings.both=Copier les notes (en HT-ML)
 CopyRatings.home=Copier les performances détaillés de l'équipe jouant à domicile dans le presse-papiers (style HT-BBCode)
 CopyRatings.away=Copier les performances détaillés de l'équipe jouant à l'extérieur dans le presse-papiers (style HT-BBCode)
@@ -870,11 +871,6 @@ matches.defense=déf
 matches.attack=att
 matches.indfreekick=Coup franc indirect
 matches.wronglang=FoxTrick\: Les statistiques ne peuvent pas être affichés parce que votre langue n'est pas enregistrée ou parce que vous avez défini la mauvaise langue dans les préférences
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Stats Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
