--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -323,11 +323,14 @@ foxtrick.MyMonitor.desc=A barátok és riválisok legutóbbi meccseinek figyelé
 #Embed Media
 EmbedMedia.EmbeddedImage=Beágyazott kép
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statisztikák
 ExtraShortcuts.transfers=Átigazolások
 ExtraShortcuts.prefs=Beállítások
 ExtraShortcuts.ftprefs=FoxTrick-beállítások
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Szezon
@@ -365,7 +368,6 @@ TeamStats.HomeGrownPlayers=Saját nevelésű játékosok
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=A szezon áttekintése
-
 seasonstats.played=Mérk.sz.
 seasonstats.won=Gy
 seasonstats.draw=D
@@ -381,7 +383,6 @@ seasonstats.friendly=Barátságos
 seasonstats.cup=Kupa
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Hírfeed-szűrő\:
 LeagueNewsFilter.all=Az összes
@@ -389,10 +390,11 @@ LeagueNewsFilter.friendlies=Barátságos meccsek és edzőcserék
 LeagueNewsFilter.transfers=Átigazolások
 LeagueNewsFilter.lineupChanges=A felállás módosításai
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=A fórum elhagyásához kattints a „Mentés” gombra a következő oldalon
 AddLeaveConfButton.LeaveForum=A fórum elhagyása
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Fórumbeállítások
 
 # ForumTemplates
@@ -409,14 +411,6 @@ show_preview_from_post=Megnézem a hozzászólás előnézetét
 preview=Előnézet
 forumPreview.send=Küldés
 
-#Forums
-copy.PostID=A hozzászólás számának vágólapra másolása
-CopyPosting=Hozzászólás másolása ebben a stílusban\: %s
-CopyPosting.abbr=Másolás ebben a stílusban\: %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=Wiki
-CopyPosting.style.raw=nyers
-CopyPosting.style.last=legutóbbi
 
 ForumYouthIcons.label=Ifikre mutató hivatkozások
 ForumYouthIcons.labelTournament=Versenyek
@@ -448,10 +442,10 @@ ForumSpecialBBCode.symbols=Szimbólum beszúrása\: %s
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick-szűrők
 TransferSearchFilters.enterName=A szűrő nevének megadása
 TransferSearchFilters.deleteFilter.ask=Tényleg törlöd a szűrőt?
 TransferSearchFilters.saveFilter=Az új szűrő mentése
-TransferSearchFilters.boxheader=FoxTrick-szűrők
 
 #Filter
 Filters=Szűrők
@@ -672,7 +666,6 @@ match.ratings.midfield=Középpálya
 match.ratings.attack=Támadás
 match.ratings.defence=Védelem
 match.ratings.total=Összesen
-lineupShortcut.lineup=felállás
 
 match.ratings.right=Jobb oldali
 match.ratings.center=Középső
@@ -738,6 +731,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=A hozzászólás számának vágólapra másolása
+CopyPosting=Hozzászólás másolása ebben a stílusban\: %s
+CopyPosting.abbr=Másolás ebben a stílusban\: %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=Wiki
+CopyPosting.style.raw=nyers
+CopyPosting.style.last=legutóbbi
+
 CopyRatings.both=Az értékelések másolása (HT-ML-ben)
 CopyRatings.home=A hazai csapat értékeléseinek másolása (HT-ML-ben)
 CopyRatings.away=A vendégcsapat értékeléseinek másolása (HT-ML-ben)
@@ -780,11 +781,6 @@ matches.defense=véd.
 matches.attack=tám.
 matches.indfreekick=Közv. pontrúgás
 matches.wronglang=FoxTrick\: a statisztikákat nem lehet megjeleníteni, mivel az általad használt nyelv nincs regisztrálva, vagy mert rossz nyelvet adtál meg a beállítások között. Ellenőrizd, hogy a FoxTrick nyelve megegyezik-e Hattricken használt nyelvvel.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Támogatói statisztikák
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
