--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -333,11 +333,14 @@ foxtrick.ShowLineupSet.Winning.desc=Auðkenna vinningslið
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Tölfræði
 ExtraShortcuts.transfers=Sölulisti
 ExtraShortcuts.prefs=Stillingar
 ExtraShortcuts.ftprefs=FoxTrick stillingar
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Tímabil
@@ -374,7 +377,6 @@ TeamStats.NotPlayedLatest=Spilaði ekki í síðasta leik
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Yfirlit tímabils
-
 seasonstats.played=L
 seasonstats.won=U
 seasonstats.draw=J
@@ -390,7 +392,6 @@ seasonstats.friendly=Vináttuleikir
 seasonstats.cup=Bikar
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Fréttastraumssía\:
 LeagueNewsFilter.all=Allt
@@ -398,10 +399,11 @@ LeagueNewsFilter.friendlies=Vináttuleikir & breyttir þjálfarar
 LeagueNewsFilter.transfers=Leikmannakaup & sölur
 LeagueNewsFilter.lineupChanges=Breytingar á liðsuppstillingu
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Smelltu á 'Vista' hnappinn á næstu síðu til að yfirgefa þetta spjallborð.
 AddLeaveConfButton.LeaveForum=Yfirgefa spjallborð
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Stillingar spjallborðs
 
 # ForumTemplates
@@ -418,14 +420,6 @@ show_preview_from_post=Sýna forskoðun á svari
 preview=Forskoðun
 forumPreview.send=Senda
 
-#Forums
-copy.PostID=Afrita svarnúmer á klippiborð
-CopyPosting=Afrita svar í %s stíl
-CopyPosting.abbr=Afrita í %s stíl
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=síðast
 
 ForumYouthIcons.label=Unglingatenglar
 ForumYouthIcons.labelToolbar=Aðaltenglar
@@ -451,10 +445,10 @@ ForumSpecialBBCode.enterSeparator=Sláðu inn sérsniðið skiltákn
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick Síur
 TransferSearchFilters.enterName=Sláðu inn nafn á síu\:
 TransferSearchFilters.deleteFilter.ask=Ertu viss að þú viljir eyða þessari síu?
 TransferSearchFilters.saveFilter=Vista nýja síu
-TransferSearchFilters.boxheader=FoxTrick Síur
 
 #Filter
 
@@ -607,7 +601,6 @@ match.ratings.midfield=Miðja
 match.ratings.attack=Sókn
 match.ratings.defence=Vörn
 match.ratings.total=Samtals
-lineupShortcut.lineup=liðsuppstilling
 
 match.ratings.right=Hægri
 match.ratings.center=Miðja
@@ -674,6 +667,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Afrita svarnúmer á klippiborð
+CopyPosting=Afrita svar í %s stíl
+CopyPosting.abbr=Afrita í %s stíl
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=síðast
+
 CopyRatings.both=Afrita einkunnagjöf (í HT-ML)
 CopyRatings.home=Afrita einkunnagjöf heimaliðs (í HT-ML)
 CopyRatings.away=Afrita einkunnagjöf gestaliðs (í HT-ML)
@@ -697,11 +698,6 @@ matches.defense=vörn
 matches.attack=sókn
 matches.indfreekick=Óbein föst leikatriði
 matches.wronglang=FoxTrick\: Ekki er hægt að sýna tölfræðina vegna þess að tungumálið þitt er ekki skrásett eða vegna þess að þú hefur stillt á rangt tungumál í stillingunum. Vinsamlegast gangið úr skugga um að tungumálið í FoxTrick sé hið sama og þú notar í Hattrick.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporter tölfræði
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
