--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -396,12 +396,15 @@ SafeForWork.icon=Icona
 #Embed Media
 EmbedMedia.EmbeddedImage=Immagine incorporata
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistiche
 ExtraShortcuts.transfers=Trasferimenti
 ExtraShortcuts.ManageCHPP=Gestisci i tuoi prodotti CHPP
 ExtraShortcuts.prefs=Preferenze
 ExtraShortcuts.ftprefs=Preferenze di FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Stagione
@@ -443,7 +446,6 @@ TeamStats.FilterFor=Filtro per
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Panoramica serie
-
 seasonstats.played=Gioc
 seasonstats.won=V
 seasonstats.draw=P
@@ -459,7 +461,6 @@ seasonstats.friendly=Amichevoli
 seasonstats.cup=Coppa
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtri sulle notizie della serie\:
 LeagueNewsFilter.all=Tutti
@@ -467,10 +468,11 @@ LeagueNewsFilter.friendlies=Amichevoli e cambi allenatori
 LeagueNewsFilter.transfers=Trasferimenti
 LeagueNewsFilter.lineupChanges=Cambi formazione
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Clicca sul pulsante 'Salva' nella prossima pagina per abbandonare il forum
 AddLeaveConfButton.LeaveForum=Abbandona forum
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Preferenze del forum
 
 # ForumTemplates
@@ -487,14 +489,6 @@ show_preview_from_post=Visualizza anteprima del messaggio
 preview=Anteprima
 forumPreview.send=Invia
 
-#Forums
-copy.PostID=Copia ID messaggio negli appunti
-CopyPosting=Copia messaggio con lo stile %s
-CopyPosting.abbr=Copia in stile %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=in linea
-CopyPosting.style.last=ultimo
 
 ForumYouthIcons.label=Collegamenti della squadra giovanile
 ForumYouthIcons.labelTournament=Tornei
@@ -529,10 +523,10 @@ ForumSpecialBBCode.symbols=Inserisci simbolo\: %s
 ShowNestedQuotes=Visualizza citazioni nidificate
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtri di Foxtrick
 TransferSearchFilters.enterName=Inserisci nome filtro\:
 TransferSearchFilters.deleteFilter.ask=Vuoi veramente cancellare questo filtro?
 TransferSearchFilters.saveFilter=Salva nuovo filtro
-TransferSearchFilters.boxheader=Filtri di Foxtrick
 
 #Filter
 Filters=Filtri
@@ -761,7 +755,6 @@ match.ratings.midfield=Centrocampo
 match.ratings.attack=Attacco
 match.ratings.defence=Difesa
 match.ratings.total=Totale
-lineupShortcut.lineup=Formazione
 
 match.ratings.right=Destra
 match.ratings.center=Centro
@@ -829,6 +822,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copia ID messaggio negli appunti
+CopyPosting=Copia messaggio con lo stile %s
+CopyPosting.abbr=Copia in stile %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=in linea
+CopyPosting.style.last=ultimo
+
 CopyRatings.both=Copia valutazioni (in HT-ML)
 CopyRatings.home=Copia le valutazioni della squadra di casa negli appunti (in formato tabella)
 CopyRatings.away=Copia le valutazioni della squadra in trasferta negli appunti (in formato tabella)
@@ -871,11 +872,6 @@ matches.defense=Dif
 matches.attack=Att
 matches.indfreekick=Calci piazzati ind.
 matches.wronglang=Foxtrick\: la lingua che hai impostato in hattrick e' diversa da quella impostata in Foxtrick, quindi le barre non possono essere visualizzate
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Statistiche dei Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
