--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -396,12 +396,15 @@ SafeForWork.icon=아이콘
 #Embed Media
 EmbedMedia.EmbeddedImage=이미지 삽입
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=통계
 ExtraShortcuts.transfers=이적
 ExtraShortcuts.ManageCHPP=당신의 CHPP 제품 관리
 ExtraShortcuts.prefs=환경설정
 ExtraShortcuts.ftprefs=폭스트릭 환경설정
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=시즌
@@ -443,7 +446,6 @@ TeamStats.FilterFor=필터링
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=시즌 개요
-
 seasonstats.played=Pld
 seasonstats.won=W
 seasonstats.draw=D
@@ -459,7 +461,6 @@ seasonstats.friendly=친선
 seasonstats.cup=컵
 seasonstats.masters=마스터즈
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=최신 이벤트 필터\:
 LeagueNewsFilter.all=모두
@@ -467,10 +468,11 @@ LeagueNewsFilter.friendlies=친선 & 코치 변경
 LeagueNewsFilter.transfers=이적
 LeagueNewsFilter.lineupChanges=라인업 변경
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=현재 토론장을 떠나기 위해서 다음 페이지의 'Save'버튼을 클릭하세요.
 AddLeaveConfButton.LeaveForum=토론장 떠나기
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=토론장 설정
 
 # ForumTemplates
@@ -487,14 +489,6 @@ show_preview_from_post=포스팅 미리보기
 preview=미리보기
 forumPreview.send=보내기
 
-#Forums
-copy.PostID=PostID를 클립보드에 복사
-CopyPosting=%s 스타일로 포스팅 복사
-CopyPosting.abbr=%s 스타일로 복사
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=last
 
 ForumYouthIcons.label=유스 링크
 ForumYouthIcons.labelTournament=토너먼트
@@ -529,10 +523,10 @@ ForumSpecialBBCode.symbols=기호 삽입\: %s
 ShowNestedQuotes=중첩 인용부호 나타내기
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=폭스트릭 필터
 TransferSearchFilters.enterName=필터 이름 입력\:
 TransferSearchFilters.deleteFilter.ask=현재 필터를 정말 삭제하길 원합니까?
 TransferSearchFilters.saveFilter=새 필터 저장
-TransferSearchFilters.boxheader=폭스트릭 필터
 
 #Filter
 Filters=필터
@@ -761,7 +755,6 @@ match.ratings.midfield=미들
 match.ratings.attack=공격
 match.ratings.defence=수비
 match.ratings.total=전체
-lineupShortcut.lineup=라인업
 
 match.ratings.right=오른쪽
 match.ratings.center=중앙
@@ -829,6 +822,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=PostID를 클립보드에 복사
+CopyPosting=%s 스타일로 포스팅 복사
+CopyPosting.abbr=%s 스타일로 복사
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=last
+
 CopyRatings.both=레이팅 복사 (HT-ML형식으로)
 CopyRatings.home=홈 레이팅 복사 (HT-ML형식으로)
 CopyRatings.away=원정 레이팅 복사 (HT-ML형식으로)
@@ -871,11 +872,6 @@ matches.defense=수비
 matches.attack=공격
 matches.indfreekick=간접 세트피스
 matches.wronglang=폭스트릭\: 당신의 언어를 인식하지 않았거나 환경설정에서 잘못된 언어로 설정했기 때문에 통계를 표시할 수 없습니다. 폭스트릭 언어가 해트트릭 언어와 같은지 확인하세요.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=서포터 통계
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
