--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -212,10 +212,13 @@ foxtrick.MatchTables.RemoveTime.desc=D'Matchzäit gëtt an der aktueller Matchta
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistiken
 ExtraShortcuts.transfers=Transferen
 ExtraShortcuts.prefs=Astellungen
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -239,7 +242,6 @@ TeamStats.NotPlayedLatest=Huet net am leschte Match gespillt
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Saisonsiwwerbléck
-
 seasonstats.played=Gsp
 seasonstats.won=G
 seasonstats.draw=R
@@ -255,7 +257,6 @@ seasonstats.friendly=Frëndschaftsmätscher
 seasonstats.cup=Coupe
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filter fir den Newsfeed\:
 LeagueNewsFilter.all=All
@@ -263,10 +264,11 @@ LeagueNewsFilter.friendlies=Frëndschaftsmätscher & Trainerwiessel
 LeagueNewsFilter.transfers=Transferen
 LeagueNewsFilter.lineupChanges=Ännerunge vun der Opstellung
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klick op de Knäppchen 'Späicheren' op der nächster Säit, fir dëse Forum ze verloossen.
 AddLeaveConfButton.LeaveForum=Forum verloossen
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Dëse Message zu engem Modell maachen.
@@ -282,8 +284,6 @@ show_preview_from_post=Message prévisualiséieren
 preview=Previsualiséieren
 forumPreview.send=Schécken
 
-#Forums
-copy.PostID=ID vum Message an d'Tëschepalette kopéieren
 
 ForumYouthIcons.label=Links fir d'Jugend
 ForumYouthIcons.labelToolbar=Haapt-Links
@@ -303,10 +303,10 @@ ForumSpecialBBCode.clock=aktuell Zäit dobäisetzen
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick-Filteren
 TransferSearchFilters.enterName=Numm vum Filter antippen\:
 TransferSearchFilters.deleteFilter.ask=Wëlls de dëse Filter wierklech läschen?
 TransferSearchFilters.saveFilter=Neie Filter späicheren
-TransferSearchFilters.boxheader=FoxTrick-Filteren
 
 #Filter
 
@@ -367,7 +367,6 @@ Stamina=Konditioun
 match.ratings.midfield=Mëttelfeld
 match.ratings.attack=Stuerm
 match.ratings.defence=Verteidegung
-lineupShortcut.lineup=Opstellung
 
 match.ratings.right=Riets
 match.ratings.center=Zentral
@@ -417,6 +416,8 @@ copy.copied=D'Annonce fir de Spiller gouf an d'Tëschepalette kopéiert.
 
 
 #copy
+copy.PostID=ID vum Message an d'Tëschepalette kopéieren
+
 CopyRatings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert.
 
 
@@ -435,11 +436,6 @@ matches.defense=Vert
 matches.attack=Stuerm
 matches.indfreekick=Indir. Fräistéiss
 matches.wronglang=FoxTrick\: D'Statistike kënnen net gewise ginn, well deng Sprooch net registréiert ass oder well déi falsch Sprooch an den Astellunge gewielt gouf. D'FoxTrick-Sprooch muss déi selwecht Sprooch si wéi déi Sprooch, déi s de bei Hattrick benotz.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporter-Statistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
