--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -93,12 +93,15 @@ foxtrick.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitāte
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Darījumi
 ExtraShortcuts.ManageCHPP=Pārvaldīt CHPP produktus
 ExtraShortcuts.prefs=Iestatījumi
 ExtraShortcuts.ftprefs=FoxTrick uzstādījumi
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Sezona
@@ -135,7 +138,6 @@ TeamStats.PurchasedPlayers=Nopirktie spēlētāji
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Sezonas pārskats
-
 seasonstats.played=Sp
 seasonstats.won=U
 seasonstats.draw=N
@@ -151,7 +153,6 @@ seasonstats.friendly=Draudzības spēles
 seasonstats.cup=Kauss
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Jaunumu filtrs\:
 LeagueNewsFilter.all=Viss
@@ -159,9 +160,10 @@ LeagueNewsFilter.friendlies=Draudzības spēles un mainītie treneri
 LeagueNewsFilter.transfers=Darījumi
 LeagueNewsFilter.lineupChanges=Spēlētāju izkārtojuma izmaiņas
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.LeaveForum=Atstāt diskusiju telpu
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Diskusiju uzstādījumi
 
 # ForumTemplates
@@ -178,12 +180,6 @@ show_preview_from_post=Parādīt ziņas priekšskatījumu
 preview=Priekšskatīt
 forumPreview.send=Nosūtīt
 
-#Forums
-copy.PostID=Kopēt PostID starpliktuvē
-CopyPosting=Kopēt ziņu %s stilā
-CopyPosting.abbr=Kopēt %s stilā
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
 
 
 
@@ -196,10 +192,10 @@ ForumSpecialBBCode.symbols=Ievietot simbolu\: %s
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick filtri
 TransferSearchFilters.enterName=Ievadiet filtra nosaukumu\:
 TransferSearchFilters.deleteFilter.ask=Vai tiešām vēlaties izdzēst šo filtru?
 TransferSearchFilters.saveFilter=Saglabāt jaunu filtru
-TransferSearchFilters.boxheader=FoxTrick filtri
 
 #Filter
 Filters=Filtri
@@ -415,7 +411,6 @@ match.ratings.midfield=Vidējā zona
 match.ratings.attack=Uzbrukums
 match.ratings.defence=Aizsardzība
 match.ratings.total=Kopā
-lineupShortcut.lineup=izkārtojums
 
 match.ratings.right=Labais
 match.ratings.center=Centra
@@ -479,6 +474,12 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Kopēt PostID starpliktuvē
+CopyPosting=Kopēt ziņu %s stilā
+CopyPosting.abbr=Kopēt %s stilā
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+
 CopyRatings.both=Kopēt sniegumu(HT-ML)
 CopyRatings.home=Kopēt mājnieku sniegumu(HT-ML)
 CopyRatings.away=Kopēt viesu sniegumu(HT-ML)
@@ -520,11 +521,6 @@ matches.center=Centra
 matches.defense=aiz
 matches.attack=uzbr
 matches.indfreekick=Net. brīvsitieni
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporter statistika
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
