--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -248,11 +248,14 @@ foxtrick.RapidId.desc=Kaxxa konvenjenti fuq in-naħa ta' fuq tal-paġna biex tku
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Trasferimenti
 ExtraShortcuts.prefs=Preferenzi
 ExtraShortcuts.ftprefs=Preferenzi ta' Foxtrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=staġun
@@ -282,7 +285,6 @@ TeamStats.NotPlayedLatest=Ma lagħabx fl-aħħar partita
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=L-istaġun inġenerali
-
 seasonstats.played=L
 seasonstats.won=R
 seasonstats.draw=D
@@ -298,7 +300,6 @@ seasonstats.friendly=Logħob ta' ħbiberija
 seasonstats.cup=Logħob tat-Tazza
 seasonstats.masters=Logħob tal-Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtru tal-aħbarijiet\:
 LeagueNewsFilter.all=Kollox
@@ -306,10 +307,11 @@ LeagueNewsFilter.friendlies=Logħob ta' ħbiberija u kowċis mibdula
 LeagueNewsFilter.transfers=Trasferimenti
 LeagueNewsFilter.lineupChanges=Bdil fil-formazzjoni
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Agħfas fuq il-buttuna 'Issejvja' li għandek issib fuq il-paġna li jmiss biex ma titlaq minn dan il-forum
 AddLeaveConfButton.LeaveForum=Itlaq mill-forum
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Agħmel template minn messaġġ
@@ -325,8 +327,6 @@ show_preview_from_post=Uri l-messaġġ kif se jiġi jidher
 preview=Ara kif se jidher
 forumPreview.send=Ibgħat
 
-#Forums
-copy.PostID=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
 
 ForumYouthIcons.label=Links għall-Minors
 ForumYouthIcons.labelToolbar=Links Prinċipali
@@ -348,10 +348,10 @@ ForumSpecialBBCode.pre=Daħħal tikketta b'format kif kien qabel
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtri ta' Foxtrick
 TransferSearchFilters.enterName=Daħħal l-isem tal-filtru\:
 TransferSearchFilters.deleteFilter.ask=Ċert li trid tħassar dan il-filtru?
 TransferSearchFilters.saveFilter=Issejvja l-filtru l-ġdid
-TransferSearchFilters.boxheader=Filtri ta' Foxtrick
 
 #Filter
 
@@ -472,7 +472,6 @@ CareerGoals.abbr=GKr
 match.ratings.midfield=Nofs
 match.ratings.attack=Attakk
 match.ratings.defence=Difens
-lineupShortcut.lineup=formazzjoni
 
 match.ratings.right=Lemin
 match.ratings.center=Ċentrali
@@ -530,6 +529,8 @@ copy.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
 
 
 #copy
+copy.PostID=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
+
 CopyRatings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
 CopyRatings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
 CopyRatings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
@@ -551,11 +552,6 @@ matches.defense=dif
 matches.attack=att
 matches.indfreekick=Set pieces ind.
 matches.wronglang=Foxtrick\: L-istatistika ma tistax tiġi murija minħabba li l-lingwa tiegħek m'hijiex irreġistrata jew inkella minħabba li int issettjajt il-lingwa l-ħażina fil-preferenzi. Jekk jogħġbok kun cert li l-lingwa ta' Foxtrick hija l-istess bħal-lingwa ta' HT.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Statistika għas-Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
