--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -393,12 +393,15 @@ foxtrick.RatingsDisplay.HatStats.desc=Als HatStats
 #Embed Media
 EmbedMedia.EmbeddedImage=Geïntegreerde afbeelding
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistieken
 ExtraShortcuts.transfers=Transfers
 ExtraShortcuts.ManageCHPP=Beheer je CHPP producten
 ExtraShortcuts.prefs=Voorkeuren
 ExtraShortcuts.ftprefs=FoxTrick voorkeuren
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Seizoen
@@ -440,7 +443,6 @@ TeamStats.FilterFor=Filter voor
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Seizoensoverzicht
-
 seasonstats.played=Gsp
 seasonstats.won=W
 seasonstats.draw=G
@@ -456,7 +458,6 @@ seasonstats.friendly=Vriendschappelijk
 seasonstats.cup=Beker
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Nieuwsfeed filter\:
 LeagueNewsFilter.all=Alles
@@ -464,10 +465,11 @@ LeagueNewsFilter.friendlies=Vriendschappelijke wedstrijden en trainerswisselinge
 LeagueNewsFilter.transfers=Transfers
 LeagueNewsFilter.lineupChanges=Opstellingsverandering
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klik op de 'Opslaan' knop op de volgende pagina om dit forum te verlaten.
 AddLeaveConfButton.LeaveForum=Verlaat forum
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Forum voorkeuren
 
 # ForumTemplates
@@ -484,14 +486,6 @@ show_preview_from_post=Toon een voorbeeld van het bericht
 preview=Voorbeeld
 forumPreview.send=Verstuur
 
-#Forums
-copy.PostID=Kopieer bericht-ID naar klembord
-CopyPosting=Kopieer post in %s stijl
-CopyPosting.abbr=Kopieer in %s stijl
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=origineel
-CopyPosting.style.last=laatste
 
 ForumYouthIcons.label=Jeugd Snelkoppelingen
 ForumYouthIcons.labelTournament=Toernooien
@@ -526,10 +520,10 @@ ForumSpecialBBCode.symbols=Symbool invoegen\: %s
 ShowNestedQuotes=Toon geneste quotes
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick filters
 TransferSearchFilters.enterName=Geef filternaam\:
 TransferSearchFilters.deleteFilter.ask=Weet je zeker dat je deze filter wilt verwijderen?
 TransferSearchFilters.saveFilter=Sla nieuwe filter op
-TransferSearchFilters.boxheader=FoxTrick filters
 
 #Filter
 Filters=Filters
@@ -757,7 +751,6 @@ match.ratings.midfield=Middenveld
 match.ratings.attack=Aanval
 match.ratings.defence=Verdediging
 match.ratings.total=Totaal
-lineupShortcut.lineup=opstelling
 
 match.ratings.right=Rechts
 match.ratings.center=Centrum
@@ -825,6 +818,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Kopieer bericht-ID naar klembord
+CopyPosting=Kopieer post in %s stijl
+CopyPosting.abbr=Kopieer in %s stijl
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=origineel
+CopyPosting.style.last=laatste
+
 CopyRatings.both=Kopieer ratings naar het klembord (HT-ML opmaak)
 CopyRatings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
 CopyRatings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
@@ -867,11 +868,6 @@ matches.defense=verd.
 matches.attack=aanv.
 matches.indfreekick=Ind. vrije trap
 matches.wronglang=FoxTrick\: De statistieken kunnen niet getoond worden, omdat jouw taal niet is geregistreerd of omdat je de verkeerde taal in je instellingen hebt gekozen. Zorg er voor dat je FoxTrick taalinstellingen gelijk zijn aan je Hattrick taalinstellingen.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporter statistieken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
