--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -290,11 +290,14 @@ foxtrick.TableSort.desc=Gjer at alle 'skikkelege' tabellar sorterbare som har ei
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistikk
 ExtraShortcuts.transfers=Overgangar
 ExtraShortcuts.prefs=Innstillingar
 ExtraShortcuts.ftprefs=FoxTrick-innstillingar
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Sesong
@@ -330,7 +333,6 @@ TeamStats.NotPlayedLatest=Spelte ikkje i førre kamp
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Sesongoversikt
-
 seasonstats.played=Spelt
 seasonstats.won=V
 seasonstats.draw=U
@@ -346,7 +348,6 @@ seasonstats.friendly=Treningskampar
 seasonstats.cup=Cup
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filter for nyhende\:
 LeagueNewsFilter.all=Alle
@@ -354,10 +355,11 @@ LeagueNewsFilter.friendlies=Treningskampar og utbytte trenarar
 LeagueNewsFilter.transfers=Overgangar
 LeagueNewsFilter.lineupChanges=Endringar i oppstillinga
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klikk på 'Lagre'-knappen på neste side for å forlate forumet.
 AddLeaveConfButton.LeaveForum=Forlat forum
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Lag mal frå forumposta
@@ -373,14 +375,6 @@ show_preview_from_post=Vis ei førehandsvisning av posten
 preview=Førehandsvisning
 forumPreview.send=Send
 
-#Forums
-copy.PostID=Kopier PostID
-CopyPosting=Kopier post i %s stil
-CopyPosting.abbr=Kopier i %s stil
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=rå
-CopyPosting.style.last=siste
 
 ForumYouthIcons.label=Ungdomslenkjer
 ForumYouthIcons.labelToolbar=Hovudlenkjer
@@ -406,10 +400,10 @@ ForumSpecialBBCode.enterSeparator=Skriv inn ein tilfeldig skiljemarkør
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick-filter
 TransferSearchFilters.enterName=Skriv inn filternamn\:
 TransferSearchFilters.deleteFilter.ask=Vil du verkeleg slette filteret?
 TransferSearchFilters.saveFilter=Lagre nytt filter
-TransferSearchFilters.boxheader=FoxTrick-filter
 
 #Filter
 
@@ -546,7 +540,6 @@ Current_league.abbr=Liga
 match.ratings.midfield=Midtbane
 match.ratings.attack=Angrep
 match.ratings.defence=Forsvar
-lineupShortcut.lineup=Oppstilling
 
 match.ratings.right=Høgre
 match.ratings.center=Sentralt
@@ -604,6 +597,14 @@ copy.copied=Spelarannonsa har vorte kopiert.
 
 
 #copy
+copy.PostID=Kopier PostID
+CopyPosting=Kopier post i %s stil
+CopyPosting.abbr=Kopier i %s stil
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=rå
+CopyPosting.style.last=siste
+
 CopyRatings.both=Kopier ratingane (i HT-ML)
 CopyRatings.home=Kopier heimelaget sin rating (i HT-ML)
 CopyRatings.away=Kopier ratingane til bortelaget (i HT-ML)
@@ -627,11 +628,6 @@ matches.defense=Forsvar
 matches.attack=Angrep
 matches.indfreekick=Indirekte daudball
 matches.wronglang=FoxTrick\: Ratinga kan ikkje verte vist, sidan språket ditt ikkje har vorte lagd til, eller sidan du har vald feil språk i innstillingar. Ver god sjekk at du har same språk i Foxtrick som på Hattrick.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporterstatistikk
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
