--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -283,10 +283,13 @@ foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statystyki
 ExtraShortcuts.transfers=Transfery
 ExtraShortcuts.prefs=Ustawienia
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=sezon
@@ -322,7 +325,6 @@ TeamStats.NotPlayedLatest=Nie grał w ostatnim meczu
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Wyniki w sezonie
-
 seasonstats.played=M
 seasonstats.won=W
 seasonstats.draw=R
@@ -338,7 +340,6 @@ seasonstats.friendly=Sparing
 seasonstats.cup=Puchar
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtry wiadomości ligowych\:
 LeagueNewsFilter.all=Wszystkie
@@ -346,10 +347,11 @@ LeagueNewsFilter.friendlies=Sparingi i zmiany trenera
 LeagueNewsFilter.transfers=Transfery
 LeagueNewsFilter.lineupChanges=Zmiany ustawienia
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Aby opuścić to forum, naciśnij przycisk 'Zapisz' na następnej stronie
 AddLeaveConfButton.LeaveForum=Opuść forum
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Zapisz post jako szablon
@@ -365,13 +367,6 @@ show_preview_from_post=Podgląd posta
 preview=Podgląd
 forumPreview.send=Wyślij
 
-#Forums
-copy.PostID=Kopiuj postID do schowka
-CopyPosting=Kopiuj w stylu %s
-CopyPosting.abbr=Kopiuj w stylu %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
 
 ForumYouthIcons.label=Linki juniorów
 ForumYouthIcons.labelToolbar=Linki domyślne
@@ -395,10 +390,10 @@ ForumSpecialBBCode.tableSeparator=Konwertuj "%s" do komórek
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtry FoxTricka
 TransferSearchFilters.enterName=Nazwij filtr\:
 TransferSearchFilters.deleteFilter.ask=Czy na pewno chcesz usunąć ten filtr?
 TransferSearchFilters.saveFilter=Dodaj nowy filtr
-TransferSearchFilters.boxheader=Filtry FoxTricka
 
 #Filter
 
@@ -532,7 +527,6 @@ Current_league.abbr=Liga
 match.ratings.midfield=Pomoc
 match.ratings.attack=Atak
 match.ratings.defence=Obrona
-lineupShortcut.lineup=Ustawienie
 
 match.ratings.right=Prawy
 match.ratings.center=Środk.
@@ -588,6 +582,13 @@ copy.copied=Reklama skopiowana\!
 
 
 #copy
+copy.PostID=Kopiuj postID do schowka
+CopyPosting=Kopiuj w stylu %s
+CopyPosting.abbr=Kopiuj w stylu %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+
 CopyRatings.home=Kopiuj oceny gospodarzy do schowka (HT-BBCode)
 CopyRatings.away=Kopiuj oceny gości do schowka (HT-BBCode)
 CopyRatings.copied=Zrobione\!
@@ -609,11 +610,6 @@ matches.defense=Obrona
 matches.attack=Atak
 matches.indfreekick=Wolne pośr.
 matches.wronglang=FoxTrick\: Statystyki nie mogą zostać pokazane, gdyż Twój język nie jest obsługiwany bądź wybrałeś zły język w opcjach FoxTricka
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Zestawienie
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
