--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -193,12 +193,15 @@ foxtrick.RatingsDisplay.HatStats.desc=Hatstats
 #Embed Media
 EmbedMedia.EmbeddedImage=Imagem anexada
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=statistics
 ExtraShortcuts.transfers=transfers
 ExtraShortcuts.ManageCHPP=Gerenciar seus produtos CHPP
 ExtraShortcuts.prefs=preferences
 ExtraShortcuts.ftprefs=Preferências do FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Temporada
@@ -227,20 +230,19 @@ TeamStats.PurchasedPlayers=Jogadores comprados
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-
 seasonstats.goaldiff=±
 seasonstats.league=Liga
 seasonstats.friendly=Amistosos
 seasonstats.cup=Copa
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Clique no Botao 'Salvar' na proxima pagina para sair desse forum
 AddLeaveConfButton.LeaveForum=Sair da conferencia
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Preferências do fórum
 
 # ForumTemplates
@@ -256,13 +258,6 @@ delete_template_ask=Apagar template?
 show_preview_from_post=Mostrar uma previa do post
 forumPreview.send=Enviar
 
-#Forums
-copy.PostID=Copiar para Area de Tranferencia
-CopyPosting=Copiar postando no estilo %s
-CopyPosting.abbr=Copiar em estilo %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.last=último
 
 ForumYouthIcons.label=Links Juniors
 ForumYouthIcons.labelToolbar=Links Principais
@@ -293,10 +288,10 @@ ForumSpecialBBCode.symbols=Inserir símbolo\: %s
 ShowNestedQuotes=Mostrar citações agrupadas  
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtros Foxtrick
 TransferSearchFilters.enterName=Coloque o nome do filtro\:
 TransferSearchFilters.deleteFilter.ask=Realmente quer apagar esse filtro?
 TransferSearchFilters.saveFilter=Salvar novo filtro
-TransferSearchFilters.boxheader=Filtros Foxtrick
 
 #Filter
 Filters=Filtros
@@ -471,7 +466,6 @@ match.ratings.midfield=Meio Campo
 match.ratings.attack=Ataque
 match.ratings.defence=Defesa
 match.ratings.total=Total
-lineupShortcut.lineup=formação
 
 match.ratings.right=Direito
 match.ratings.center=Centro
@@ -535,6 +529,13 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copiar para Area de Tranferencia
+CopyPosting=Copiar postando no estilo %s
+CopyPosting.abbr=Copiar em estilo %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.last=último
+
 CopyRatings.both=Copiar notas (em HT-ML)
 CopyRatings.home=Copiar notas em casa (HT-ML)
 CopyRatings.away=Copiar notas fora (HT-ML)
@@ -571,11 +572,6 @@ matches.defense=def
 matches.attack=ata
 matches.indfreekick=Falta Indireta
 matches.wronglang=Foxtrick\: As Estatisticas não podem ser exibidas porque seu idioma não esta registrado ou porque voce escolheu um idioma diferente nas preferencias. Por favor mude seu idioma no Foxtrick para o mesmo idioma do seu Hattrick.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Estatiticas Exclusivas
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
