--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -244,12 +244,15 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Permanecer na página de ordens dep
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Estatísticas
 ExtraShortcuts.transfers=transfers
 ExtraShortcuts.ManageCHPP=Gerenciar seus produtos CHPP
 ExtraShortcuts.prefs=Preferências
 ExtraShortcuts.ftprefs=Preferências de FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Temporada
@@ -283,7 +286,6 @@ TeamStats.PurchasedPlayers=Jogadores comprados
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Visão geral da temporada
-
 seasonstats.won=V
 seasonstats.draw=E
 seasonstats.lost=D
@@ -294,16 +296,16 @@ seasonstats.total=T
 seasonstats.home=H
 seasonstats.away=A
 
-
 #Newsfeed filter
 LeagueNewsFilter.all=Todos
 LeagueNewsFilter.transfers=Transferências
 LeagueNewsFilter.lineupChanges=Mudanças na formação
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Clique no botão 'Guardar' na próxima página para abandonar este fórum.
 AddLeaveConfButton.LeaveForum=Abandonar fórum
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Preferências de fórum
 
 # ForumTemplates
@@ -320,14 +322,6 @@ show_preview_from_post=Mostrar uma previsão do novo post
 preview=Prever
 forumPreview.send=Enviar
 
-#Forums
-copy.PostID=Copiar para a área de transferência
-CopyPosting=Copiar post no estilo %s
-CopyPosting.abbr=Copiar estilo de %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=última
 
 ForumYouthIcons.label=Links Academia
 ForumYouthIcons.labelToolbar=Links Principais
@@ -358,10 +352,10 @@ ForumSpecialBBCode.symbols=Inserir símbolo\: %s
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtros Foxtrick
 TransferSearchFilters.enterName=Nome do Filtro\:
 TransferSearchFilters.deleteFilter.ask=Quer mesmo eliminar este filtro?
 TransferSearchFilters.saveFilter=Guardar novo filtro
-TransferSearchFilters.boxheader=Filtros Foxtrick
 
 #Filter
 Filters=Filtros
@@ -534,7 +528,6 @@ match.ratings.midfield=Meio-Campo
 match.ratings.attack=Ataque
 match.ratings.defence=Defesa
 match.ratings.total=Total
-lineupShortcut.lineup=Formação
 
 match.ratings.right=Direita
 match.ratings.center=Centro
@@ -594,6 +587,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copiar para a área de transferência
+CopyPosting=Copiar post no estilo %s
+CopyPosting.abbr=Copiar estilo de %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=última
+
 CopyRatings.both=Copiar ratings (em HT-ML)
 CopyRatings.home=﻿Cópiar ratings casa (HT-ML)
 CopyRatings.away=Copiar ratings fora (in HT-ML)
@@ -636,11 +637,6 @@ matches.defense=Defesa
 matches.attack=Ataque
 matches.indfreekick=Livre Ind.
 matches.wronglang=Foxtrick\: As estatísticas não podem ser mostradas porque a tua língua não está registada ou escolheste a língua errada nas preferências. Por favor tem a certeza que a tua língua do Hattrick e do Foxtrick são a mesma.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Estatísticas Sócio HT
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
