--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -396,12 +396,15 @@ SafeForWork.icon=Pictograma
 #Embed Media
 EmbedMedia.EmbeddedImage=Imagine incorporata
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistici
 ExtraShortcuts.transfers=Transferuri
 ExtraShortcuts.ManageCHPP=Coordoneaza produsele tale CHPP
 ExtraShortcuts.prefs=Preferinte
 ExtraShortcuts.ftprefs=Preferinte FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Sezon
@@ -443,7 +446,6 @@ TeamStats.FilterFor=Filtru pentru
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Date sezon
-
 seasonstats.played=Mec
 seasonstats.won=V
 seasonstats.draw=E
@@ -459,7 +461,6 @@ seasonstats.friendly=Amicale
 seasonstats.cup=Cupa
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtru stiri\:
 LeagueNewsFilter.all=Toate
@@ -467,10 +468,11 @@ LeagueNewsFilter.friendlies=Amicale si antrenor noi
 LeagueNewsFilter.transfers=Transferuri
 LeagueNewsFilter.lineupChanges=Schimbarea ordinelor de meci
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Click pe butonul 'Salveaza' pe pagina urmatoare pentru a parasi acest forum.
 AddLeaveConfButton.LeaveForum=Paraseste forumul
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Forum Preferences
 
 # ForumTemplates
@@ -487,14 +489,6 @@ show_preview_from_post=Previzualizare mesaj
 preview=Previzualizare
 forumPreview.send=Trimite
 
-#Forums
-copy.PostID=Copiaza postID in clipboard
-CopyPosting=Copiaza in stilul %s
-CopyPosting.abbr=Copiaza in stilul %s
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=coloana
-CopyPosting.style.last=ultima
 
 ForumYouthIcons.label=Linkuri juniori
 ForumYouthIcons.labelTournament=Turnee
@@ -529,10 +523,10 @@ ForumSpecialBBCode.symbols=Inserare simbol\: %s
 ShowNestedQuotes=Arata quote-urile imbricate  
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtre FoxTrick
 TransferSearchFilters.enterName=Introduceti numele filtrului\:
 TransferSearchFilters.deleteFilter.ask=Sigur doriti sa stergeti acest filtru?
 TransferSearchFilters.saveFilter=Salveaza filtru nou
-TransferSearchFilters.boxheader=Filtre FoxTrick
 
 #Filter
 Filters=Filtre
@@ -761,7 +755,6 @@ match.ratings.midfield=Mijloc
 match.ratings.attack=Atac
 match.ratings.defence=Aparare
 match.ratings.total=Total
-lineupShortcut.lineup=Asezare
 
 match.ratings.right=Dreapta
 match.ratings.center=Centru
@@ -829,6 +822,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copiaza postID in clipboard
+CopyPosting=Copiaza in stilul %s
+CopyPosting.abbr=Copiaza in stilul %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=coloana
+CopyPosting.style.last=ultima
+
 CopyRatings.both=Copiaza ratingurile (stil HT-ML)
 CopyRatings.home=Copiaza ratingurile gazdelor (stil HT-ML)
 CopyRatings.away=Copiaza ratingurile vizitatorilor(stil HT-ML)
@@ -871,11 +872,6 @@ matches.defense=apar
 matches.attack=atac
 matches.indfreekick=Faze fixe indirecte
 matches.wronglang=Foxtrick\: Datele nu pot fi afisate pentru ca limba dumneavoastra nu este inregistrata sau pentru ca ati setat limba gresita la preferinte. Fiti sigur ca limba din Foxtrick este aceeasi ca si limba din Hattrick.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Statistici Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
