--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -250,11 +250,14 @@ foxtrick.RapidId.desc=Chytré okienko na vrchu stránky pre zobrazenie tímu, hr
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=štatistiky
 ExtraShortcuts.transfers=prestupy
 ExtraShortcuts.prefs=preferencie
 ExtraShortcuts.ftprefs=FoxTrick nastavenia
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=sezóna
@@ -283,7 +286,6 @@ TeamStats.NotPlayedLatest=Nehrali v poslednom zápase
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-
 seasonstats.played=Odoh
 seasonstats.won=V
 seasonstats.draw=R
@@ -299,7 +301,6 @@ seasonstats.friendly=Priateláky
 seasonstats.cup=Pohár
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filter s novinkami\:
 LeagueNewsFilter.all=Všetky
@@ -307,10 +308,11 @@ LeagueNewsFilter.friendlies=Priateláky a zmeny trénerov
 LeagueNewsFilter.transfers=Prestupy
 LeagueNewsFilter.lineupChanges=Zmeny v zostavách
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Pre opustenie tejto konferencie klikni na ďalšej stránke na tlačítko 'Uložiť'.
 AddLeaveConfButton.LeaveForum=Opustiť konferenciu
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Vytvoriť šablónu z príspevku
@@ -326,8 +328,6 @@ show_preview_from_post=Zobrazit náhľad príspevku
 preview=Náhľad
 forumPreview.send=Poslať
 
-#Forums
-copy.PostID=Kopírovať do schránky
 
 ForumYouthIcons.label=Dorastenecké odkazy
 ForumYouthIcons.labelToolbar=Štandardné odkazy
@@ -349,10 +349,10 @@ ForumSpecialBBCode.pre=Vložiť 'pre' formátovaciu značku
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Foxtrick filtre
 TransferSearchFilters.enterName=Napíš názov filtra\:
 TransferSearchFilters.deleteFilter.ask=Určite chceš odstrániť tento filter?
 TransferSearchFilters.saveFilter=Uložiť nový filter
-TransferSearchFilters.boxheader=Foxtrick filtre
 
 #Filter
 
@@ -474,7 +474,6 @@ CareerGoals.abbr=KG
 match.ratings.midfield=Záloha
 match.ratings.attack=Útok
 match.ratings.defence=Obrana
-lineupShortcut.lineup=zostava
 
 match.ratings.right=Pravý
 match.ratings.center=Stredný
@@ -531,6 +530,8 @@ copy.copied=Informácie o hráčovi boli vložené do schránky.
 
 
 #copy
+copy.PostID=Kopírovať do schránky
+
 CopyRatings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
 CopyRatings.away=Skopírovať ratingy hosťujúceho tímu (v HT-ML formáte)
 CopyRatings.copied=Ratingy boli skopírované do schránky.
@@ -553,11 +554,6 @@ matches.defense=obrana
 matches.attack=útok
 matches.indfreekick=Nepriame kopy
 matches.wronglang=FoxTrick\: Štatistiky nemôžu byť zobrazené, lebo Váš jazyk nie je registrovaný, prípadne v nastaveniach je zvolený nesprávny jazyk. Uistite sa, že jazyk nastavený vo foxtricku je rovnaký ako Váš jazyk na HT.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Štatistiky supportera
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
