--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -178,12 +178,15 @@ foxtrick.RatingsDisplay.HatStats.desc=Kot HatStati
 #Embed Media
 EmbedMedia.EmbeddedImage=Vgnezdena slika
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Prestopi
 ExtraShortcuts.ManageCHPP=Upravljajte vaše CHPP izdelke
 ExtraShortcuts.prefs=Nastavitve
 ExtraShortcuts.ftprefs=FoxTrick nastavitve
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Sezona
@@ -221,7 +224,6 @@ TeamStats.FilterFor=Filter za
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Pregled sezone
-
 seasonstats.won=W
 seasonstats.draw=D
 seasonstats.lost=L
@@ -235,17 +237,17 @@ seasonstats.friendly=Prijateljske tekme
 seasonstats.cup=Pokal
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.all=Vse
 LeagueNewsFilter.friendlies=Prijateljske tekme & spremembe trenerja
 LeagueNewsFilter.transfers=Prestopi
 LeagueNewsFilter.lineupChanges=Spremembe postavitve
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Kliknite na gumb 'Shrani' na naslednji strani, če želite zapustiti ta forum.
 AddLeaveConfButton.LeaveForum=Zapusti forum
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Nastavitve foruma
 
 # ForumTemplates
@@ -261,10 +263,6 @@ show_preview_from_post=Prikaži predogled napisanega
 preview=Predogled
 forumPreview.send=Pošlji
 
-#Forums
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.last=zadnje
 
 ForumYouthIcons.labelTournament=Turnirji
 ForumYouthIcons.youthplayerid=Vstavi oznako mladinca.
@@ -292,10 +290,10 @@ ForumSpecialBBCode.forumSymbol=Vstavi "%s"
 ShowNestedQuotes=Pokaži ugnezdene citate  
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick filtri
 TransferSearchFilters.enterName=Vnesite ime filtra\:
 TransferSearchFilters.deleteFilter.ask=Ali res želite izbrisati ta filter?
 TransferSearchFilters.saveFilter=Shrani nov filter
-TransferSearchFilters.boxheader=FoxTrick filtri
 
 #Filter
 Filters=Filtri
@@ -500,7 +498,6 @@ match.ratings.midfield=Sredina
 match.ratings.attack=Napad
 match.ratings.defence=Obramba
 match.ratings.total=Skupno
-lineupShortcut.lineup=postavitev
 
 match.ratings.right=Desno
 match.ratings.left=Levo
@@ -556,6 +553,10 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.last=zadnje
+
 CopyRatings.both=Kopiraj ocene (v HT-ML)
 CopyRatings.home=Kopiraj domače ocene (v HT-ML)
 CopyRatings.away=Kopiraj gostujoče ocene (v HT-ML)
@@ -591,11 +592,6 @@ matches.defense=obr
 matches.attack=nap
 matches.indfreekick=Indir. prosti streli
 matches.wronglang=FoxTrick\: Statistike ni mogoče prikazati, ker vaš jezik ni registriran ali, ker imate nastavljen napačen jezik v nastavitvah. Prosimo, prepričajte se, da je vaš jezik v FoxTricku enak jeziku v Hattricku.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Statistika suporterjev
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
