--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -215,10 +215,13 @@ foxtrick.MatchTables.RemoveTime.desc=Heq kohet e ndeshjeve te tabela
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=statistika
 ExtraShortcuts.transfers=transferta
 ExtraShortcuts.prefs=preferencat
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -242,7 +245,6 @@ TeamStats.NotPlayedLatest=Nuk luajtën ndeshjen e fundit
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Paraqitja e sezonit
-
 seasonstats.played=Nde
 seasonstats.won=F
 seasonstats.draw=B
@@ -258,7 +260,6 @@ seasonstats.friendly=Miqësore
 seasonstats.cup=Kup
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtër i lajmeve\:
 LeagueNewsFilter.all=Të gjitha
@@ -266,10 +267,11 @@ LeagueNewsFilter.friendlies=Miqësore dhe ndryshim traineri
 LeagueNewsFilter.transfers=Transferta
 LeagueNewsFilter.lineupChanges=Ndryshime rreshtimi
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klikoni butonin "Ruaj" te faqa tjetër për të dal nga ky forum.
 AddLeaveConfButton.LeaveForum=dilni nga konferenca
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Kthejeni postimin në shëmbull standart
@@ -285,8 +287,6 @@ show_preview_from_post=Trego paraqitjen e postimit
 preview=Paraqitje
 forumPreview.send=Dërgo
 
-#Forums
-copy.PostID=Kopjo PostimID te tabela
 
 ForumYouthIcons.label=Link Rinor
 ForumYouthIcons.labelToolbar=Link Kryesor
@@ -307,10 +307,10 @@ ForumSpecialBBCode.spoiler=shto spoiler
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtrimet FoxTrick
 TransferSearchFilters.enterName=Shto emrin e filtrimit\:
 TransferSearchFilters.deleteFilter.ask=Doni ta fshini këtë filtrim?
 TransferSearchFilters.saveFilter=Ruaj filtrimin e ri
-TransferSearchFilters.boxheader=Filtrimet FoxTrick
 
 #Filter
 
@@ -371,7 +371,6 @@ Stamina=Rrezistenca
 match.ratings.midfield=Mesfusha
 match.ratings.attack=Sulmi
 match.ratings.defence=Mbrojtja
-lineupShortcut.lineup=rreshtimi
 
 match.ratings.right=Djathtas
 match.ratings.center=Qëndër
@@ -421,6 +420,8 @@ copy.copied=Reklama e lojtarit është shtuar te tabela.
 
 
 #copy
+copy.PostID=Kopjo PostimID te tabela
+
 CopyRatings.copied=Vlerësimet janë shtuar te tabela.
 
 
@@ -439,11 +440,6 @@ matches.defense=mbro
 matches.attack=sul
 matches.indfreekick=Godi. st. indi.
 matches.wronglang=FoxTrick\: Statistikat nuk mund të shfaqen sepse gjuha juaj nuk është e rregjistruar ose sepse keni zgjedhur gjuhën e gabuar te preferencat. Ju lutemi sigurohuni që gjuha juaj e Foxtrick është njësoj si ajo në Hattrick.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Statistikat e Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
