--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -178,9 +178,12 @@ foxtrick.HighlightCupwins.desc=Виділяє команду-переможця 
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Статистика Supporter
 ExtraShortcuts.transfers=Трансфери
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -204,7 +207,6 @@ TeamStats.NotPlayedLatest=Не грали в останньому матчі
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Статистика сезону
-
 seasonstats.played=М
 seasonstats.won=В
 seasonstats.draw=Н
@@ -220,7 +222,6 @@ seasonstats.friendly=Товариські
 seasonstats.cup=Кубок
 seasonstats.masters=Мастерс
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Фільтр новин ліги\:
 LeagueNewsFilter.all=Всі новини
@@ -228,10 +229,11 @@ LeagueNewsFilter.friendlies=Тов. матчі та зміна тренера
 LeagueNewsFilter.transfers=Трансфери
 LeagueNewsFilter.lineupChanges=Зміна наказів на гру
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Натисніть кнопку 'Зберегти' на наступній сторінці, щоб покинути цей форум.
 AddLeaveConfButton.LeaveForum=Покинути форум
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Створити шаблон з цього повідомлення
@@ -247,8 +249,6 @@ show_preview_from_post=Показати попередній перегляд п
 preview=Попередній перегляд
 forumPreview.send=Надіслати
 
-#Forums
-copy.PostID=Копіювати ID повідомлення до буферу обміну
 
 ForumYouthIcons.label=Теги для молодіжки
 ForumYouthIcons.labelToolbar=Теги для дорослої команди
@@ -267,10 +267,10 @@ ForumSpecialBBCode.article=Посилання на статтю
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Шаблони FoxTrick
 TransferSearchFilters.enterName=Введіть назву шаблону\:
 TransferSearchFilters.deleteFilter.ask=Справді хочете видалити цей шаблон?
 TransferSearchFilters.saveFilter=Зберегти шаблон
-TransferSearchFilters.boxheader=Шаблони FoxTrick
 
 #Filter
 
@@ -331,7 +331,6 @@ Stamina=Витривалість
 match.ratings.midfield=Півзахист
 match.ratings.attack=Напад
 match.ratings.defence=Захист
-lineupShortcut.lineup=розташування
 
 match.ratings.right=справа
 match.ratings.center=по центру
@@ -380,6 +379,8 @@ copy.copied=Інформацію про гравця скопійовано до
 
 
 #copy
+copy.PostID=Копіювати ID повідомлення до буферу обміну
+
 CopyRatings.copied=Рейтинги матчу скопійовано до буферу обміну.
 
 
@@ -398,11 +399,6 @@ matches.defense=Захист
 matches.attack=Напад
 matches.indfreekick=Неп. вільні удари
 matches.wronglang=FoxTrick\: Статистика не відображається через помилковий вибір мови в налаштуваннях, або відсутності підтримки Вашої мови
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Статистика Supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
