--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -347,12 +347,15 @@ foxtrick.MobileEnhancements.desc=优化在移动设备上的显示
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=统计
 ExtraShortcuts.transfers=转会
 ExtraShortcuts.ManageCHPP=管理 CHPP 产品
 ExtraShortcuts.prefs=首选项
 ExtraShortcuts.ftprefs=FoxTrick 首选项
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=赛季
@@ -389,7 +392,6 @@ TeamStats.NotPlayedLatest=未在上一场比赛中出场
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=赛季综述
-
 seasonstats.played=赛
 seasonstats.won=胜
 seasonstats.draw=平
@@ -405,7 +407,6 @@ seasonstats.friendly=友谊赛
 seasonstats.cup=杯赛
 seasonstats.masters=大师杯
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=新闻筛选\:
 LeagueNewsFilter.all=全部
@@ -413,10 +414,11 @@ LeagueNewsFilter.friendlies=友谊赛以及教练变更
 LeagueNewsFilter.transfers=转会
 LeagueNewsFilter.lineupChanges=修改布阵
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=点击下一页面中的“保存”按钮以离开此论坛.
 AddLeaveConfButton.LeaveForum=离开论坛
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=论坛首选项
 
 # ForumTemplates
@@ -433,14 +435,6 @@ show_preview_from_post=显示文章预览
 preview=预览
 forumPreview.send=发送
 
-#Forums
-copy.PostID=将帖子 ID 复制到剪帖版
-CopyPosting=以 %s 样式复制帖子
-CopyPosting.abbr=复制为 %s 样式
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=纯文本
-CopyPosting.style.last=上次
 
 ForumYouthIcons.label=青年队链接
 ForumYouthIcons.labelToolbar=主链接
@@ -469,10 +463,10 @@ ForumSpecialBBCode.enterSeparator=自定义分隔符
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick 过滤器
 TransferSearchFilters.enterName=输入过滤器名称\:
 TransferSearchFilters.deleteFilter.ask=你真的要删除该过滤器吗?
 TransferSearchFilters.saveFilter=保存新过滤器
-TransferSearchFilters.boxheader=FoxTrick 过滤器
 
 #Filter
 
@@ -633,7 +627,6 @@ match.ratings.midfield=中场
 match.ratings.attack=攻击
 match.ratings.defence=防守
 match.ratings.total=总计
-lineupShortcut.lineup=阵容
 
 match.ratings.right=右
 match.ratings.center=中
@@ -701,6 +694,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=将帖子 ID 复制到剪帖版
+CopyPosting=以 %s 样式复制帖子
+CopyPosting.abbr=复制为 %s 样式
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=纯文本
+CopyPosting.style.last=上次
+
 CopyRatings.both=复制比赛评级 (HT-ML 格式)
 CopyRatings.home=复制主队比赛评级 (HT-ML 格式)
 CopyRatings.away=复制客队比赛评级 (HT-ML 格式)
@@ -735,11 +736,6 @@ matches.defense=防守
 matches.attack=攻击
 matches.indfreekick=间接定位球
 matches.wronglang=FoxTrick\: 由于你的语言没有注册或你在首选项中设置了错误的语言, 统计数据无法显示. 请确认你的 FoxTrick 语言与 Hattrick 语言相同.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=HT 支持者统计
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
