--- a/content/locale/bg/foxtrick.properties
+++ b/content/locale/bg/foxtrick.properties
@@ -42,7 +42,10 @@ direction=ltr
 
 #Embed Media
 
-#icons
+#Extrashortcuts
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -56,18 +59,16 @@ direction=ltr
 #season stats
 #note to translators. use abreviations of league table where applicable
 
-
-
 #Newsfeed filter
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 
+#ShowForumPrefButton
 
 # ForumTemplates
 
 #PostPreview
 
-#Forums
 
 
 
@@ -135,11 +136,8 @@ direction=ltr
 
 
 
+
 #matches
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
