--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -389,12 +389,15 @@ foxtrick.RatingsDisplay.HatStats.desc=Jako HatStats
 #Embed Media
 EmbedMedia.EmbeddedImage=Vložený obrázek
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistiky
 ExtraShortcuts.transfers=Přestupy
 ExtraShortcuts.ManageCHPP=Správa CHPP aplikací
 ExtraShortcuts.prefs=Nastavení
 ExtraShortcuts.ftprefs=Nastavení FoxTricku
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Sezóna
@@ -436,7 +439,6 @@ TeamStats.FilterFor=Filtr pro
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Souhrn sezóny
-
 seasonstats.played=Z
 seasonstats.won=V
 seasonstats.draw=R
@@ -452,7 +454,6 @@ seasonstats.friendly=Přátelská utkání
 seasonstats.cup=Pohár
 seasonstats.masters=HT Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filtr ligových zpráv\:
 LeagueNewsFilter.all=Vše
@@ -460,10 +461,11 @@ LeagueNewsFilter.friendlies=Přátelská utkání a změny trenérů
 LeagueNewsFilter.transfers=Přestupy
 LeagueNewsFilter.lineupChanges=Změny sestav
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Pro opuštění této konference klikni na další stránce na tlačítko 'Uložit'.
 AddLeaveConfButton.LeaveForum=Opustit konferenci
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Nastavení konferencí
 
 # ForumTemplates
@@ -480,14 +482,6 @@ show_preview_from_post=Zobrazit náhled příspěvku
 preview=Náhled
 forumPreview.send=Poslat
 
-#Forums
-copy.PostID=Kopírovat ID příspěvku do schránky
-CopyPosting=Kopírovat příspěvek ve stylu %s
-CopyPosting.abbr=Kopírovat v %s stylu
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=Wiki
-CopyPosting.style.raw=textovém
-CopyPosting.style.last=předchozím
 
 ForumYouthIcons.label=Dorostenecké odkazy
 ForumYouthIcons.labelTournament=Turnaje
@@ -522,10 +516,10 @@ ForumSpecialBBCode.symbols=Vložit symbol\: %s
 ShowNestedQuotes=Zobrazit vložené citace
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Foxtrick filtry
 TransferSearchFilters.enterName=Napiš název filtru\:
 TransferSearchFilters.deleteFilter.ask=Opravdu chceš odstranit tento filtr?
 TransferSearchFilters.saveFilter=Uložit nový filtr
-TransferSearchFilters.boxheader=Foxtrick filtry
 
 #Filter
 Filters=Filtry
@@ -753,7 +747,6 @@ match.ratings.midfield=Záloha
 match.ratings.attack=Útok
 match.ratings.defence=Obrana
 match.ratings.total=Celek
-lineupShortcut.lineup=sestava
 
 match.ratings.right=Pravý
 match.ratings.center=Střední
@@ -821,6 +814,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Kopírovat ID příspěvku do schránky
+CopyPosting=Kopírovat příspěvek ve stylu %s
+CopyPosting.abbr=Kopírovat v %s stylu
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=Wiki
+CopyPosting.style.raw=textovém
+CopyPosting.style.last=předchozím
+
 CopyRatings.both=Zkopírovat hodnocení (v HT-ML)
 CopyRatings.home=Zkopírovat hodnocení domácího týmu (v HT-ML)
 CopyRatings.away=Zkopírovat hodnocení hostujícího týmu (v HT-ML)
@@ -863,11 +864,6 @@ matches.defense=obrana
 matches.attack=útok
 matches.indfreekick=Nepřímé kopy
 matches.wronglang=FoxTrick\: Statistiky nemohou být zobrazeny, neboť váš jazyk není registrován, případně je v nastavení zvolen špatný jazyk. Ujistěte se, že jazyk nastavený ve Foxtricku je stejný, jako váš jazyk na Hattricku.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Statistiky Fanouška
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
