--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -248,7 +248,10 @@ foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 #Embed Media
 
-#icons
+#Extrashortcuts
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -262,14 +265,13 @@ foxtrick.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 #season stats
 #note to translators. use abreviations of league table where applicable
 
-
-
 #Newsfeed filter
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
 AddLeaveConfButton.LeaveForum=Forlad forum
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Lav skabeloner fra post
@@ -278,7 +280,6 @@ delete_template_ask=Slet skabelon?
 
 #PostPreview
 
-#Forums
 
 
 
@@ -436,7 +437,6 @@ match.ratings.midfield=Midtbane
 match.ratings.attack=Angreb
 match.ratings.defence=Forsvar
 match.ratings.total=I alt
-lineupShortcut.lineup=kampopstilling
 
 match.ratings.right=Højre
 match.ratings.center=Center
@@ -478,6 +478,7 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+
 CopyRatings.both=Kopiere ratings (i HT-ML)
 CopyRatings.home=Kopiere hjemmehold ratings (i HT-ML)
 CopyRatings.away=Kopiere udehold ratings (i HT-ML)
@@ -519,10 +520,6 @@ matches.defense=Forsvar
 matches.attack=Angreb
 matches.indfreekick=Ind. frispark
 matches.wronglang=Foxtrick\: stats kan ikke vises, fordi dit sprog ikke er registreret eller fordi du har angivet et forkert sprog i indstillingerne.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
