--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -396,12 +396,15 @@ SafeForWork.icon=Icon
 #Embed Media
 EmbedMedia.EmbeddedImage=Eingebettetes Bild
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistiken
 ExtraShortcuts.transfers=Transfers
 ExtraShortcuts.ManageCHPP=Deine CHPP Produkte
 ExtraShortcuts.prefs=Einstellungen
 ExtraShortcuts.ftprefs=FoxTrick-Einstellungen
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Saison
@@ -443,7 +446,6 @@ TeamStats.FilterFor=Filtern nach
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Saisonübersicht
-
 seasonstats.played=Sp
 seasonstats.won=S
 seasonstats.draw=U
@@ -459,7 +461,6 @@ seasonstats.friendly=Freundschaftsspiele
 seasonstats.cup=Pokal
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=News-Filter\:
 LeagueNewsFilter.all=Alle
@@ -467,10 +468,11 @@ LeagueNewsFilter.friendlies=Freundschaftsspiele
 LeagueNewsFilter.transfers=Transfers
 LeagueNewsFilter.lineupChanges=Aufstellungen
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Auf den Speichern-Button im nächsten Fenster klicken um dieses Forum abzubestellen.
 AddLeaveConfButton.LeaveForum=Forum abbestellen
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Foren-Einstellungen
 
 # ForumTemplates
@@ -487,14 +489,6 @@ show_preview_from_post=Vorschau des Postings anzeigen
 preview=Vorschau
 forumPreview.send=Absenden
 
-#Forums
-copy.PostID=In die Zwischenablage kopieren
-CopyPosting=Kopiere Posting im %s Stil
-CopyPosting.abbr=Kopiere im %s Stil
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=Wiki
-CopyPosting.style.raw=unformatierten
-CopyPosting.style.last=letzten
 
 ForumYouthIcons.label=Jugendlinks
 ForumYouthIcons.labelTournament=Turniere
@@ -529,10 +523,10 @@ ForumSpecialBBCode.symbols=Symbol einfügen\: %s
 ShowNestedQuotes=Zeige verschachtelte Zitat an
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick Filter
 TransferSearchFilters.enterName=Filtername\:
 TransferSearchFilters.deleteFilter.ask=Diesen Filter wirklich löschen?
 TransferSearchFilters.saveFilter=Filter speichern
-TransferSearchFilters.boxheader=FoxTrick Filter
 
 #Filter
 Filters=Filter
@@ -761,7 +755,6 @@ match.ratings.midfield=Mittelfeld
 match.ratings.attack=Angriff
 match.ratings.defence=Verteidigung
 match.ratings.total=Total
-lineupShortcut.lineup=Aufstellung
 
 match.ratings.right=Rechts
 match.ratings.center=Mitte
@@ -829,6 +822,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=In die Zwischenablage kopieren
+CopyPosting=Kopiere Posting im %s Stil
+CopyPosting.abbr=Kopiere im %s Stil
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=Wiki
+CopyPosting.style.raw=unformatierten
+CopyPosting.style.last=letzten
+
 CopyRatings.both=Ratings kopieren (in HT-ML)
 CopyRatings.home=Ratings der Heimmannschaft kopieren (in HT-ML)
 CopyRatings.away=Ratings der Auswärtsmannschaft kopieren (in HT-ML)
@@ -871,11 +872,6 @@ matches.defense=Abwehr
 matches.attack=Angriff
 matches.indfreekick=ind. Freistösse
 matches.wronglang=FoxTrick\: Statistiken können nicht angezeigt werden, da die gewählte Sprache nicht unterstützt wird oder falsch eingestellt wurde. Bitte stell sicher, dass deine FoxTrick-Spracheinstellung mit der Sprache von Hattrick übereinstimmt\!
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporter Statistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
