--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -143,9 +143,12 @@ foxtrick.MatchIncome.desc=Wedstriidynkommen yn wedstriidrapport
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=statistyken
 ExtraShortcuts.transfers=oerstappen
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -161,14 +164,13 @@ TeamStats.boxheader=Ploechoersjoch
 #season stats
 #note to translators. use abreviations of league table where applicable
 
-
-
 #Newsfeed filter
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klik op 'Opslaan' op de folgjende side om dit foarum te ferlitten.
 AddLeaveConfButton.LeaveForum=ferlit foarum
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Meitsje template fan berjocht
@@ -178,8 +180,6 @@ delete_template_ask=Template ferwiderje?
 #PostPreview
 show_preview_from_post=Toan foarútblik fan it berjocht
 
-#Forums
-copy.PostID=Kopiearje nei klemboerd
 
 ForumYouthIcons.label=Jeugdkoppelings
 ForumYouthIcons.labelToolbar=Haadkoppelings
@@ -195,10 +195,10 @@ ForumSpecialBBCode.br=foegje enter yn
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Foxtrick Filters
 TransferSearchFilters.enterName=Jou filternamme op\:
 TransferSearchFilters.deleteFilter.ask=Wolst dit filter echt ferwiderje?
 TransferSearchFilters.saveFilter=Bewarje nij filter
-TransferSearchFilters.boxheader=Foxtrick Filters
 
 #Filter
 
@@ -259,7 +259,6 @@ Stamina=Kondysje
 match.ratings.midfield=Middenfjild
 match.ratings.attack=Oanfal
 match.ratings.defence=Ferdigening
-lineupShortcut.lineup=opstelling
 
 match.ratings.right=Rjochts
 match.ratings.center=Sintraal
@@ -301,6 +300,8 @@ copy.copied=De spileradvertinsje is kopiearre nei it klemboerd.
 
 
 #copy
+copy.PostID=Kopiearje nei klemboerd
+
 CopyRatings.copied=De wurdearrings binne kopiearre nei it klemboerd.
 
 
@@ -316,11 +317,6 @@ matches.defense=ferd
 matches.attack=oanf
 matches.indfreekick=Ynd. frije trapen
 matches.wronglang=Foxtrick\: De stats kinne net toand wurde omdat dyn taal net registrearre is, of omdat de ferkearde taal ynsteld is by foarkeuren. Sjoch nei of dyn Foxtricktaal gelyk is oan dyn Hattricktaal.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporterstatistiken
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
