--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -184,9 +184,12 @@ foxtrick.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 
 #Embed Media
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=estatísticas
 ExtraShortcuts.transfers=traspasos
+
+#lineupShortcut
+
 
 #HistoryStats
 
@@ -205,17 +208,16 @@ TeamStats.Pictures=Imaxes
 
 #season stats
 #note to translators. use abreviations of league table where applicable
-
 seasonstats.friendly=Amigables
 seasonstats.cup=Copa
 
-
 #Newsfeed filter
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Fai clic no botón de 'Gardar' na seguinte páxina para abandoar esta conferencia
 AddLeaveConfButton.LeaveForum=Abandoar conferencia
 
+#ShowForumPrefButton
 
 # ForumTemplates
 make_template_from_post=Fai unha plantiña da seguinte mensaxe
@@ -231,8 +233,6 @@ show_preview_from_post=Amosa unha previsualización da mensaxe
 preview=Previsualización
 forumPreview.send=Enviar
 
-#Forums
-copy.PostID=Copiar ao portapapeis
 
 ForumYouthIcons.label=Ligazóns de xuvenís
 ForumYouthIcons.labelToolbar=Ligazóns principais
@@ -251,10 +251,10 @@ ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filtros de Foxtrick
 TransferSearchFilters.enterName=Inserta o nome do filtro\:
 TransferSearchFilters.deleteFilter.ask=Realmente queres borrar este filto?
 TransferSearchFilters.saveFilter=Garda o novo filtro
-TransferSearchFilters.boxheader=Filtros de Foxtrick
 
 #Filter
 Filters=Filtros
@@ -435,7 +435,6 @@ match.ratings.midfield=Mediocampo
 match.ratings.attack=Ataque
 match.ratings.defence=Defensa
 match.ratings.total=Total
-lineupShortcut.lineup=aliñación
 
 match.ratings.right=Dereita
 match.ratings.center=Centtro
@@ -493,6 +492,8 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Copiar ao portapapeis
+
 CopyRatings.both=Copiar calificacións (en HT-ML)
 CopyRatings.home=Copiar calificacións locais (en HT-ML)
 CopyRatings.away=Copiar calificacións visitante (en HT-ML)
@@ -514,11 +515,6 @@ matches.defense=def
 matches.attack=ata
 matches.indfreekick=Saques de falta ind.
 matches.wronglang=Foxtrick\: Non se puideron amosar as estatísticas porque a túa lingua aínda non está rexistrada ou porque te equivocaras ao establecer a lingua nas preferncias. Por favor asegúrate de que a lingua que teñas non Foxtrick sexa a mesma que empregas no Hattrick
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Estatísticas de supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
