--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -396,12 +396,15 @@ SafeForWork.icon=Ikona
 #Embed Media
 EmbedMedia.EmbeddedImage=Ubačena slika
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Transferi
 ExtraShortcuts.ManageCHPP=Upravljajte vašim CHPP programima koje koristite
 ExtraShortcuts.prefs=Postavke
 ExtraShortcuts.ftprefs=FoxTrickove postavke
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Sezona
@@ -443,7 +446,6 @@ TeamStats.FilterFor=Filter za
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Pregled sezone
-
 seasonstats.played=O
 seasonstats.won=P
 seasonstats.draw=N
@@ -459,7 +461,6 @@ seasonstats.friendly=Prijateljske
 seasonstats.cup=Kup
 seasonstats.masters=Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Filter za novosti\:
 LeagueNewsFilter.all=Sve
@@ -467,10 +468,11 @@ LeagueNewsFilter.friendlies=Prijateljske i promjene trenera
 LeagueNewsFilter.transfers=Transferi
 LeagueNewsFilter.lineupChanges=Promjene taktike
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klikni na link 'Spremi' na sljedećoj stranici za napuštanje ovog foruma.
 AddLeaveConfButton.LeaveForum=Napusti forum
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Postavke foruma
 
 # ForumTemplates
@@ -487,14 +489,6 @@ show_preview_from_post=Prikaži pregled poruke
 preview=Pregled
 forumPreview.send=Pošalji
 
-#Forums
-copy.PostID=Kopiraj ID poruke u međuspremnik
-CopyPosting=Kopirajte postanje u %s stilu
-CopyPosting.abbr=Kopiraj u %s stilu
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=sirov
-CopyPosting.style.last=zadnji
 
 ForumYouthIcons.label=Linkovi za juniore
 ForumYouthIcons.labelTournament=Turniri
@@ -529,10 +523,10 @@ ForumSpecialBBCode.symbols=Umetnite simbol\: %s
 ShowNestedQuotes=Prikaži velike citate
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=Filteri
 TransferSearchFilters.enterName=Odredi ime filtera\:
 TransferSearchFilters.deleteFilter.ask=Da li zaista želiš obrisati ovaj filter?
 TransferSearchFilters.saveFilter=Spremi novi filter
-TransferSearchFilters.boxheader=Filteri
 
 #Filter
 Filters=Filteri
@@ -761,7 +755,6 @@ match.ratings.midfield=Sredina
 match.ratings.attack=Napad
 match.ratings.defence=Obrana
 match.ratings.total=Ukupno
-lineupShortcut.lineup=postava
 
 match.ratings.right=Desni
 match.ratings.center=Sredina
@@ -829,6 +822,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Kopiraj ID poruke u međuspremnik
+CopyPosting=Kopirajte postanje u %s stilu
+CopyPosting.abbr=Kopiraj u %s stilu
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=sirov
+CopyPosting.style.last=zadnji
+
 CopyRatings.both=Kopiraj ocjene (u HT-ML)
 CopyRatings.home=Kopiraj ocjene domaće momčadi u međuspremnik (HT-ML stil)
 CopyRatings.away=Kopiraj ocjene gostujuće momčadi u međuspremnik (HT-ML stil)
@@ -871,11 +872,6 @@ matches.defense=obr
 matches.attack=nap
 matches.indfreekick=Ind. slob. udarac
 matches.wronglang=Foxtrick\: Statistika ne može biti prikazana jer vaš jezik nije prijavljen ili niste podesili prikladan jezik u postavkama. Pripazite da odaberete isti jezik kako u Foxtricku tako i u Hattricku.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Statistike Supportera
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
