--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -372,12 +372,15 @@ foxtrick.RatingsDisplay.HatStats.desc=Som HatStats
 #Embed Media
 EmbedMedia.EmbeddedImage=Inbäddad bild
 
-#icons
+#Extrashortcuts
 ExtraShortcuts.statistics=Statistik
 ExtraShortcuts.transfers=Transfers
 ExtraShortcuts.ManageCHPP=Hantera dina CHPP produkter
 ExtraShortcuts.prefs=Foruminställningar
 ExtraShortcuts.ftprefs=Inställningar FoxTrick
+
+#lineupShortcut
+
 
 #HistoryStats
 HistoryStats.season=Säsong
@@ -418,7 +421,6 @@ TeamStats.PurchasedPlayers=Inköpta spelare
 #season stats
 #note to translators. use abreviations of league table where applicable
 seasonstats.boxheader=Säsongsöversikt
-
 seasonstats.played=S
 seasonstats.won=V
 seasonstats.draw=O
@@ -434,7 +436,6 @@ seasonstats.friendly=Träningsmatcher
 seasonstats.cup=Cup
 seasonstats.masters=Hattrick Masters
 
-
 #Newsfeed filter
 LeagueNewsFilter.label=Nyhetsfilter\:
 LeagueNewsFilter.all=Alla
@@ -442,10 +443,11 @@ LeagueNewsFilter.friendlies=Träningsmatcher och bytta tränare
 LeagueNewsFilter.transfers=Transfers
 LeagueNewsFilter.lineupChanges=Laguppställningsändringar
 
-# FoxtrickAddLeaveConfButton
+# AddLeaveConfButton
 AddLeaveConfButton.alert=Klicka på 'Spara'-knappen på nästa sida för att lämna det här forumet
 AddLeaveConfButton.LeaveForum=Lämna forum
 
+#ShowForumPrefButton
 ShowForumPrefButton.forumPreferences=Foruminställningar
 
 # ForumTemplates
@@ -462,14 +464,6 @@ show_preview_from_post=Visa en förhandsgranskning av inlägget
 preview=Förhandsgranskning
 forumPreview.send=Skicka
 
-#Forums
-copy.PostID=Kopiera InläggsId till urklipp
-CopyPosting=Kopiera post i %s stil
-CopyPosting.abbr=Kopiera i %s stil
-CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=raw
-CopyPosting.style.last=senaste
 
 ForumYouthIcons.label=Juniorlänkar
 ForumYouthIcons.labelToolbar=Huvudlänkar
@@ -501,10 +495,10 @@ ForumSpecialBBCode.symbols=Infoga symbol\: %s
 ShowNestedQuotes=Visa nästlade citat
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick Filter
 TransferSearchFilters.enterName=Skriv in filternamn\:
 TransferSearchFilters.deleteFilter.ask=Vill du verkligen ta bort detta filer?
 TransferSearchFilters.saveFilter=Spara nytt filter
-TransferSearchFilters.boxheader=FoxTrick Filter
 
 #Filter
 Filters=Filter
@@ -726,7 +720,6 @@ match.ratings.midfield=Mittfält
 match.ratings.attack=Anfall
 match.ratings.defence=Försvar
 match.ratings.total=Totalt
-lineupShortcut.lineup=Uppställning
 
 match.ratings.right=Höger
 match.ratings.center=Mitten
@@ -794,6 +787,14 @@ ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
 #copy
+copy.PostID=Kopiera InläggsId till urklipp
+CopyPosting=Kopiera post i %s stil
+CopyPosting.abbr=Kopiera i %s stil
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
+CopyPosting.style.last=senaste
+
 CopyRatings.both=Kopiera betyg (HT-ML)
 CopyRatings.home=Kopiera hemmalagets betyg till urklipp (HT-ML)
 CopyRatings.away=Kopiera bortalagets betyg till urklipp (HT-ML)
@@ -836,11 +837,6 @@ matches.defense=för
 matches.attack=anf
 matches.indfreekick=Ind. frisparkar
 matches.wronglang=Foxtrick\: Statistiken kan inte visas därför att ditt språk inte är registrerat eller för att du har satt fel språk i inställningarna. Säkerställ att ditt språk i Foxtrick och Hattrick är samma.
-
-
-# NOTE TO TRANSLATORS
-# Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-shortcuts.suppstats=Supporterstatistik
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
